--- a/apk/res/values-kk/strings.xml
+++ b/apk/res/values-kk/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Құрылғыңыздағы денсаулық және фитнес деректерін реттеп, оларды пайдалана алатын қолданбаларды таңдаңыз."</string>
     <string name="data_title" msgid="4456619761533380816">"Деректер және пайдалану рұқсаты"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Денсаулық туралы ақпаратты шолу"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Денсаулық туралы ақпаратты және оны пайдалана алатын қолданбаларды көру"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Барлық санат"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Барлық санатты көру"</string>
     <string name="no_data" msgid="1906986019249068659">"Ешқандай дерек жоқ."</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасы бұдан былай Health Connect-тегі деректерді, соның ішінде фондық және бұрынғы деректерді оқи немесе жаза алмайды.\n\nБұл жайт камераны, микрофонды немесе локацияны пайдалану сияқты осы қолданбадағы басқа рұқсаттарға әсер етпейді."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"<xliff:g id="APP_NAME">%1$s</xliff:g> қолданбасынан алынған фитнес дерегі мен денсаулық туралы ақпарат та Health Connect-тен жойылсын"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Осы қолданбаға арналған рұқсаттар өшірілді."</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Барлық Health Connect дерегін де жою"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Келесі күн"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Таңдалған күн"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Алдыңғы күн"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Қолданба рұқсаты"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Орнатылған үйлесімді қолданбалар жоқ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Қосымша пайдалану рұқсаты"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Бұрынғы деректер, фондық деректер"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Бұл қолданбаның қосымша рұқсаттары өшірілді."</string>
     <string name="permissions_header" msgid="6519976063360071569">"Рұқсаттар"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Фитнес пен денсаулық"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Аз мөлшердегі бөлініс"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Орташа мөлшердегі бөлініс"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Көп мөлшердегі бөлініс"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Етеккір ағыны"</string>
     <string name="period_day" msgid="3821944462093965882">"Етеккір: <xliff:g id="DAY">%1$d</xliff:g>/<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> күн"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Етеккір (1 күн)}other{Етеккір (# күн)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Оң"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Теріс"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Жоғары"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Қолданба дереккөздерін өзгерту"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Құрылғының әдепкі қолданбасы"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Қолданба деректері"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> деректері осы жерде көрсетіледі."</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect-ке кіру рұқсаты бар қолданбалардан алынған дерек осы жерде көрсетіледі."</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Күн"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Апта"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Ай"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Белгілі бір апта (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>) бойынша таңдалған <xliff:g id="APP_NAME">%1$s</xliff:g> жазбалары біржола жойылсын ба?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Белгілі бір ай (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>) бойынша таңдалған <xliff:g id="APP_NAME">%1$s</xliff:g> жазбалары біржола жойылсын ба?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Бұл <xliff:g id="APP_NAME">%s</xliff:g> жазбасы біржола жойылсын ба?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> қолданбасындағы <xliff:g id="DATA_TYPE">%1$s</xliff:g> деректерін біржола жою керек пе?"</string>
 </resources>
