--- a/apk/res/values-ky/strings.xml
+++ b/apk/res/values-ky/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> мындан ары Health Connect\'теги эч кандай, анын ичинде фондогу маалыматты окуп же жаза албай калат.\n\nБул нерсе колдонмодогу башка уруксаттарга, мисалы, жайгашкан жер, камера же микрофонго кедергисин тийгизбейт."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Ошондой эле Health Connect\'теги <xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосунан дене-бойду чыңдоо маалыматы жана ден соолук жөнүндө маалыматты өчүрүңүз"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Бул колдонмо үчүн уруксаттар өчүрүлдү"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Health Connect\'теги бардык маалыматтарды да өчүрүү"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Кийинки күн"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Тандалган күн"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Мурунку күн"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Колдонмо булактарын түзөтүү"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Түзмөктүн демейки параметри"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Колдонмонун дайындары"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосундагы маалымат бул жерде көрсөтүлөт"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Колдонмолордогу Health Connect кызматына байланыштуу нерселер ушул жерде көрүнөт"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Күн"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Апта"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Ай"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Белгилүү бир апта (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>) боюнча тандалган <xliff:g id="APP_NAME">%1$s</xliff:g> маалыматы биротоло өчүрүлсүнбү?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Белгилүү бир ай (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>) боюнча тандалган <xliff:g id="APP_NAME">%1$s</xliff:g> маалыматы биротоло өчүрүлсүнбү?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> маалыматын биротоло өчүрөсүзбү?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> колдонмосундагы <xliff:g id="DATA_TYPE">%1$s</xliff:g> биротоло өчүрүлсүнбү?"</string>
 </resources>
