--- a/apk/res/values-si/strings.xml
+++ b/apk/res/values-si/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ඔබේ උපාංගයෙහි සෞඛ්‍ය සහ යෝග්‍යතා දත්ත කළමනාකරණය කරන්න, සහ එයට ප්‍රවේශ විය හැකි යෙදුම් පාලනය කරන්න"</string>
     <string name="data_title" msgid="4456619761533380816">"දත්ත සහ ප්‍රවේශය"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"සෞඛ්‍ය වාර්තා බ්‍රවුස් කරන්න"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"ඔබේ සෞඛ්‍ය වාර්තා සහ ඒවාට ප්‍රවේශ විය හැකි යෙදුම් බලන්න"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"ප්‍රවර්ග සියල්ල"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"සියලු ප්‍රවර්ග බලන්න"</string>
     <string name="no_data" msgid="1906986019249068659">"දත්ත නැත"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට තවදුරටත් පසුබිම් සහ අතීත දත්ත ඇතුළුව Health Connect වෙතින් දත්ත කියවීමට හෝ ලිවීමට නොහැකි වනු ඇත.\n\nකැමරාව, මයික්‍රොෆෝනය හෝ ස්ථානය වැනි මෙම යෙදුමට තිබිය හැකි වෙනත් අවසරවලට මෙය බලපාන්නේ නැත."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Health Connect වෙතින් <xliff:g id="APP_NAME">%1$s</xliff:g> හි යෝග්‍යතා දත්ත සහ සෞඛ්‍ය වාර්තා ද මකන්න"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"මෙම යෙදුම සඳහා අවසර ඉවත් කරන ලදි"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"එසේම සියලු Health Connect දත්ත මකන්න"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"ඊළඟ දිනය"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"තෝරා ගත් දිනය"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"පෙර දිනය"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"යෙදුම් ප්‍රවේශය"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"ඔබට දැනට ගැළපෙන යෙදුම් කිසිවක් ස්ථාපන කර නැත"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"අතිරේක ප්‍රවේශය"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"අතීත දත්ත, පසුබිම් දත්ත"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"මෙම යෙදුම සඳහා අතිරේක අවසර ඉවත් කරන ලදි"</string>
     <string name="permissions_header" msgid="6519976063360071569">"අවසර"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"යෝග්‍යතාවය සහ සුවතාවය"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"සුළු වහනයක් සහිත"</string>
     <string name="flow_medium" msgid="3783688724668943154">"මධ්‍යම වහනයක් සහිත"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"දැඩි වහනයක් සහිත"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"නොදන්නා ප්‍රවාහය"</string>
     <string name="period_day" msgid="3821944462093965882">"ඔසප් වීම <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> න් <xliff:g id="DAY">%1$d</xliff:g> වෙනි දිනය"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{ඔසප් වීම (1 දිනයක්)}one{ඔසප් වීම (දින #ක්)}other{ඔසප් වීම (දින #ක්)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"පොසිටිව්"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"නෙගටිව්"</string>
     <string name="ovulation_high" msgid="205362931427158291">"ඉහළ"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"යෙදුම් මූලාශ්‍ර සංස්කරණය කරන්න"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"උපාංගයේ පෙරනිමිය"</string>
     <string name="app_data_title" msgid="6499967982291000837">"යෙදුම් දත්ත"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> වෙතින් දත්ත මෙහි පෙන්වනු ඇත"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect වෙත ප්‍රවේශය ඇති යෙදුම් වෙතින් දත්ත මෙහි පෙන්වනු ඇත"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"දිනය"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"සතිය"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"මාසය"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> සතිය සඳහා තෝරා ගත් <xliff:g id="APP_NAME">%1$s</xliff:g> ඇතුළත් කිරීම් ස්ථිරවම මකන්න ද?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> සඳහා තෝරා ගත් <xliff:g id="APP_NAME">%1$s</xliff:g> ඇතුළත් කිරීම් ස්ථිරවම මකන්න ද?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"මෙම <xliff:g id="APP_NAME">%s</xliff:g> ඇතුළත් කිරීම ස්ථිරවම මකන්න ද?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> සඳහා <xliff:g id="DATA_TYPE">%1$s</xliff:g> දත්ත ස්ථිරවම මකන්න ද?"</string>
 </resources>
