--- a/apk/res/values-sw/strings.xml
+++ b/apk/res/values-sw/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Dhibiti data ya afya na siha kwenye kifaa chako na udhibiti programu zinazoweza kuifikia"</string>
     <string name="data_title" msgid="4456619761533380816">"Data na ufikiaji"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Vinjari rekodi za afya"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Angalia rekodi zako za afya na programu zinazoweza kuzifikia"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Aina zote"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Angalia aina zote"</string>
     <string name="no_data" msgid="1906986019249068659">"Hakuna data"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> haitaweza tena kusoma au kuandika data kutoka Health Connect, ikiwemo data ya chinichini na ya awali.\n\nHali hii haiathiri ruhusa nyingine ambazo huenda zinatumika kwenye programu hii, kama vile ruhusa za mahali, kamera au maikrofoni."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Futa pia data ya siha na rekodi za afya zilizo kwenye <xliff:g id="APP_NAME">%1$s</xliff:g> kutoka Health Connect"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Umeondoa ruhusa za programu hii"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Futa pia data yote katika Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Siku inayofuata"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Siku iliyochaguliwa"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Siku iliyotangulia"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Ufikiaji wa programu"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Kwa sasa hujasakinisha programu zozote zinazooana"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Ufikiaji wa ziada"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Data ya zamani, data ya chinichini"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Ruhusa za ziada za programu hii zimeondolewa"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Ruhusa"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Siha na afya"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Mtiririko mdogo wa damu"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Mtiririko kiasi wa damu"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Mtiririko mkubwa wa damu"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Mtiririko wa kiwango kisichojulikana cha hedhi"</string>
     <string name="period_day" msgid="3821944462093965882">"Siku ya <xliff:g id="DAY">%1$d</xliff:g> kati ya siku <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> za hedhi"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Hedhi (siku 1)}other{Hedhi (siku #)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Yai limepevuka"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Yai halijapevuka"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Juu"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Badilisha vyanzo vya programu"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Hali chaguomsingi ya kifaa"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Data ya programu"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Data kutoka kwenye <xliff:g id="APP_NAME">%1$s</xliff:g> itaonyeshwa hapa"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Data kutoka kwenye programu zinazofikia Health Connect itaonyeshwa hapa"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Siku"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Wiki"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mwezi"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Ungependa kufuta kabisa data uliyochagua ya <xliff:g id="APP_NAME">%1$s</xliff:g> ya wiki ya <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ungependa kufuta kabisa data uliyochagua ya <xliff:g id="APP_NAME">%1$s</xliff:g> ya <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Ungependa kufuta kabisa data hii ya <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Ungependa kufuta kabisa data ya <xliff:g id="DATA_TYPE">%1$s</xliff:g> kwenye <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
