--- a/apk/res/values-as/strings.xml
+++ b/apk/res/values-as/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g>এ নেপথ্য আৰু আগৰ ডেটাকে ধৰি Health Connectৰ কোনো ডেটা আৰু পঢ়িব বা লিখিব নোৱাৰিব।\n\nএইটোৱে এই এপ্‌টোৰ ওচৰত থাকিব পৰা কেমেৰা, মাইক্ৰ’ফ’ন বা অৱস্থানৰ দৰে অন্য অনুমতিসমূহত প্ৰভাৱ নেপেলায়।"</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"লগতে, <xliff:g id="APP_NAME">%1$s</xliff:g> Health Connectৰ পৰা সুস্থতাৰ ডেটা আৰু স্বাস্থ্য সম্বন্ধীয় নথি মচক"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"এই এপ্‌টোৰ বাবে অনুমতি আঁতৰোৱা হৈছে"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"লগতে Health Connectৰ আটাইবোৰ ডেটা মচক"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"পৰৱৰ্তী দিন"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"বাছনি কৰা দিন"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"পূৰ্বৱৰ্তী দিন"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"এপৰ উৎস সম্পাদনা কৰক"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ডিভাইচৰ ডিফ’ল্ট"</string>
     <string name="app_data_title" msgid="6499967982291000837">"এপৰ ডেটা"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g>ৰ ডেটাখিনি ইয়াত দেখা পোৱা যাব"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connectৰ এক্সেছ থকা এপ্‌সমূহৰ ডেটা ইয়াত দেখুওৱা হ’ব"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"দিন"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"সপ্তাহ"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"মাহ"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>ৰ সপ্তাহৰ বাবে <xliff:g id="APP_NAME">%1$s</xliff:g>ৰ বাছনি কৰা প্ৰৱিষ্টিসমূহ স্থায়ীভাৱে মচিবনে?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>ৰ বাবে <xliff:g id="APP_NAME">%1$s</xliff:g>ৰ বাছনি কৰা প্ৰৱিষ্টিসমূহ স্থায়ীভাৱে মচিবনে?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g>ৰ এই প্ৰৱিষ্টিটো স্থায়ীভাৱে মচিবনে?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g>ৰ বাবে আটাইবোৰ <xliff:g id="DATA_TYPE">%1$s</xliff:g> ডেটা স্থায়ীভাৱে মচিবনে?"</string>
 </resources>
