--- a/apk/res/values-b+sr+Latn/strings.xml
+++ b/apk/res/values-b+sr+Latn/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> više neće moći da čita ni upisuje podatke iz Povezivanja zdravlja, uključujući pozadinske i ranije podatke.\n\nTo ne utiče na druge dozvole koje ova aplikacija može da ima, poput kamere, mikrofona ili lokacije."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Izbriši i podatke o fitnesu i zdravstvenu evidenciju iz aplikacije <xliff:g id="APP_NAME">%1$s</xliff:g> iz Povezivanja zdravlja"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Dozvole za ovu aplikaciju su uklonjene"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Izbriši i sve podatke Povezivanja zdravlja"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Sledeći dan"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Izabrani dan"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Prethodni dan"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Izmeni izvore aplikacija"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Podrazumevano za uređaj"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Podaci aplikacija"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Podaci iz aplikacije <xliff:g id="APP_NAME">%1$s</xliff:g> će biti ovde"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Podaci iz aplikacija sa pristupom Povezivanju zdravlja će biti ovde"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Dan"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Nedelja"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mesec"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Želite trajno da izbrišete izabrane unose u: <xliff:g id="APP_NAME">%1$s</xliff:g> za nedelju <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Želite trajno da izbrišete izabrane unose u: <xliff:g id="APP_NAME">%1$s</xliff:g> za <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Želite trajno da izbrišete ovaj unos u: <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Želite trajno da izbrišete podatke tipa <xliff:g id="DATA_TYPE">%1$s</xliff:g> za <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
