--- a/apk/res/values-be/strings.xml
+++ b/apk/res/values-be/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Кіруйце на сваёй прыладзе данымі пра здароўе і фізічную актыўнасць, а таксама доступам праграм да гэтай інфармацыі"</string>
     <string name="data_title" msgid="4456619761533380816">"Даныя і доступ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Паглядзець інфармацыю пра стан здароўя"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Праглядайце сваю інфармацыю пра стан здароўя і якія праграмы маюць да яе доступ"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Усе катэгорыі"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Праглядзець усе катэгорыі"</string>
     <string name="no_data" msgid="1906986019249068659">"Няма даных"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"Праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" больш не зможа счытваць і запісваць даныя з платформы \"Здароўе і спорт\", у тым ліку мінулыя даныя і даныя, запісаныя ў фонавым рэжыме.\n\nГэта не паўплывае на іншыя дазволы, якія можа мець гэта праграма, напрыклад на доступ да камеры, мікрафона ці геаданых."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Таксама выдаліць з платформы \"Здароўе і спорт\" даныя пра фізічную актыўнасць і стан здароўя, атрыманыя ў праграме \"<xliff:g id="APP_NAME">%1$s</xliff:g>\""</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Дазволы для гэтай праграмы выдалены"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Таксама выдаліць усе даныя праграмы \"Здароўе і спорт\""</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Наступны дзень"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Абраны дзень"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Папярэдні дзень"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Доступы праграмы"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"У вас не ўсталяваны сумяшчальныя праграмы"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Пашыраны доступ"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Мінулыя даныя, фонавыя даныя"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Дадатковыя дазволы для гэтай праграмы скасаваны"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Дазволы"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Фітнес і здароўе"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Слабы крывацёк"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Умераны крывацёк"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Моцны крывацёк"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Невядомая інтэнсіўнасць крывацёку"</string>
     <string name="period_day" msgid="3821944462093965882">"Перыяд: дзень <xliff:g id="DAY">%1$d</xliff:g> з <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Менструацыя (1 дзень)}one{Менструацыя (# дзень)}few{Менструацыя (# дні)}many{Менструацыя (# дзён)}other{Менструацыя (# дня)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Станоўчы"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Адмоўны"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Высокая фертыльнасць"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Змяніць спіс праграм – крыніц даных"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Стандартная праграма прылады"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Даныя праграмы"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Тут будуць паказвацца даныя з праграмы \"<xliff:g id="APP_NAME">%1$s</xliff:g>\""</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Тут будуць паказвацца даныя з праграм, у якіх ёсць доступ да \"Здароўя і спорту\""</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Дзень"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Тыдзень"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Месяц"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Назаўсёды выдаліць выбраныя запісы праграмы \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" за тыдзень <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Назаўсёды выдаліць выбраныя запісы праграмы \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Назаўсёды выдаліць гэты запіс праграмы \"<xliff:g id="APP_NAME">%s</xliff:g>\"?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Назаўсёды выдаліць даныя \"<xliff:g id="DATA_TYPE">%1$s</xliff:g>\" для праграмы \"<xliff:g id="APP_NAME">%2$s</xliff:g>\"?"</string>
 </resources>
