--- a/apk/res/values-bg/strings.xml
+++ b/apk/res/values-bg/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Управлявайте данните за здравословното състояние и физическата активност, съхранявани на устройството ви, и контролирайте кои приложения да имат достъп до тях"</string>
     <string name="data_title" msgid="4456619761533380816">"Данни и достъп"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Преглед на здравните картони"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Преглед на здравните ви картони и на приложенията, които имат достъп до тях"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Всички категории"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Преглед на всички категории"</string>
     <string name="no_data" msgid="1906986019249068659">"Няма данни"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> вече няма да може да чете, нито да записва данни от Health Connect, включително данни на заден план и данни за минали периоди.\n\nТова няма да засегне другите разрешения, с които приложението може да разполага, като например за достъп до камерата, микрофона или местоположението."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Изтриване от Health Connect и на данните за физическата активност и здравните картони от <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Разрешенията за това приложение са премахнати"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Изтриване и на всички данни в Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Следващият ден"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Избраният ден"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Предишният ден"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Достъп на приложението"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Понастоящем нямате инсталирани съвместими приложения"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Допълнителен достъп"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Минали данни, данни на заден план"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Допълнителните разрешения са премахнати за това приложение"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Разрешения"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Физическа активност и благосъстояние"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Слабо менструално течение"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Умерено менструално течение"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Обилно менструално течение"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Няма данни за менструалното течение"</string>
     <string name="period_day" msgid="3821944462093965882">"Ден <xliff:g id="DAY">%1$d</xliff:g> от <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> от месечния цикъл"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Менструация (1 ден)}other{Менструация (# дни)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Положителен резултат"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Отрицателен резултат"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Висока"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Редактиране на източниците на приложения"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Стандартно за устройството"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Данни от приложението"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Данните от <xliff:g id="APP_NAME">%1$s</xliff:g> ще се показват тук"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Тук ще се показват данните от приложенията, които имат достъп до Health Connect"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Ден"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Седмица"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Месец"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Да се изтрият ли за постоянно избраните записи от <xliff:g id="APP_NAME">%1$s</xliff:g> за седмицата <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Да се изтрият ли за постоянно избраните записи от <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Да се изтрие ли за постоянно този запис от <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Да се изтрият ли за постоянно данните за <xliff:g id="DATA_TYPE">%1$s</xliff:g> за <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
