--- a/apk/res/values-ca/strings.xml
+++ b/apk/res/values-ca/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Gestiona les dades de salut i fitnes al dispositiu, i controla quines aplicacions poden accedir-hi"</string>
     <string name="data_title" msgid="4456619761533380816">"Dades i accés"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Navega pels registres de salut"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Consulta els teus registres de salut i quines aplicacions hi poden accedir"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Totes les categories"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Mostra totes les categories"</string>
     <string name="no_data" msgid="1906986019249068659">"No hi ha dades"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ja no podrà llegir ni escriure dades de Salut connectada, ni tan sols les dades anteriors o en segon pla.\n\nAixò no afecta altres permisos que pot tenir aquesta aplicació, com ara els relacionats amb la càmera, el micròfon o la ubicació."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Suprimeix també de Salut connectada les dades de fitnes i els registres de salut de <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"S\'han suprimit els permisos per a aquesta aplicació"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Suprimeix també totes les dades de Salut connectada"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Dia següent"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Dia seleccionat"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Dia anterior"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Accés de l\'aplicació"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Actualment no tens cap aplicació compatible instal·lada"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Accés addicional"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Dades anteriors, dades en segon pla"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"S\'han suprimit els permisos addicionals per a aquesta aplicació"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Permisos"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitnes i benestar"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Flux lleuger"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Flux normal"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Flux abundant"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Flux desconegut"</string>
     <string name="period_day" msgid="3821944462093965882">"Dia <xliff:g id="DAY">%1$d</xliff:g> de <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> del període menstrual"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Període menstrual (1 dia)}other{Període (# dies)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positiva"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativa"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Alta"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Edita les fonts d\'aplicacions"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Opció predeterminada del dispositiu"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Dades de l\'aplicació"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Les dades de <xliff:g id="APP_NAME">%1$s</xliff:g> es mostraran aquí"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Les dades de les aplicacions amb accés a Salut connectada es mostraran aquí"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Dia"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Setmana"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mes"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Vols suprimir permanentment les entrades seleccionades de l\'aplicació <xliff:g id="APP_NAME">%1$s</xliff:g> de la setmana <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Vols suprimir permanentment les entrades seleccionades de l\'aplicació <xliff:g id="APP_NAME">%1$s</xliff:g> de <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Vols suprimir permanentment aquesta entrada de l\'aplicació <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Vols suprimir permanentment les dades de <xliff:g id="DATA_TYPE">%1$s</xliff:g> de <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
