--- a/apk/res/values-de/strings.xml
+++ b/apk/res/values-de/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Du kannst die Gesundheits- und Fitnessdaten auf deinem Gerät verwalten und entscheiden, welche Apps darauf zugreifen können"</string>
     <string name="data_title" msgid="4456619761533380816">"Daten und Zugriff"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Gesundheitsdaten ansehen"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Gesundheitsdaten und Apps aufrufen, die darauf zugreifen dürfen"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Alle Kategorien"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Alle Kategorien ansehen"</string>
     <string name="no_data" msgid="1906986019249068659">"Keine Daten"</string>
@@ -333,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Wenn du der App Lesezugriff gibst, kann sie neue Daten und die Daten der letzten 30 Tage lesen"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Wenn du der App Lesezugriff gibst, kann sie neue und frühere Daten lesen"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"<xliff:g id="APP_NAME">%1$s</xliff:g> Zugriff auf Health Connect erlauben?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Wie <xliff:g id="APP_NAME">%1$s</xliff:g> mit deinen Daten umgeht, erfährst du in der <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g> des Entwicklers"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"Datenschutzerklärung"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"<xliff:g id="APP_NAME">%1$s</xliff:g> Zugriff auf deine Gesundheitsdaten erlauben?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Wenn du der App Zugriff gewährst, kann sie Daten zu Allergien, Laborergebnissen, Impfungen und mehr lesen und schreiben\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Informationen zu Gesundheitsdaten"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Zu teilende Daten"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Mit dieser Erlaubnis kann <xliff:g id="APP_NAME">%1$s</xliff:g> deine Gesundheitsdaten mit Health Connect teilen."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Du kannst deine Gesundheitsdaten aus verschiedenen Apps und Quellen synchronisieren lassen, um sie an einem Ort zu speichern"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Alle Berechtigungen entfernen?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Alle entfernen"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> kann dann keine Daten mehr von Health Connect lesen oder schreiben.\n\nDies hat keine Auswirkungen auf andere Berechtigungen, die diese App möglicherweise hat, wie z. B. Kamera, Mikrofon oder Standort."</string>
@@ -370,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ kann dann keine Daten mehr von Health Connect lesen oder schreiben, auch keine Hintergrunddaten und früheren Daten.\n\nDies hat keine Auswirkungen auf andere Berechtigungen, die diese App möglicherweise hat, wie z. B. Berechtigungen für Kamera, Mikrofon oder Standort."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Auch Fitnessdaten und Gesundheitsdaten von „<xliff:g id="APP_NAME">%1$s</xliff:g>“ aus Health Connect löschen"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Berechtigungen für diese App entfernt"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Auch alle Health Connect-Daten löschen"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Nächster Tag"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Ausgewählter Tag"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Vortag"</string>
@@ -410,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"App-Zugriff"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Derzeit sind keine kompatiblen Apps installiert"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Zusätzliche Zugriffsrechte"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Frühere Daten, Hintergrunddaten"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Zusätzliche Berechtigungen für diese App entfernt"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Berechtigungen"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness und Wohlbefinden"</string>
@@ -612,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Leichte Blutung"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Mittlere Blutung"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Starke Blutung"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Menstruationsfluss unbekannt"</string>
     <string name="period_day" msgid="3821944462093965882">"Tag <xliff:g id="DAY">%1$d</xliff:g> von <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> der Periode"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Periode (1 Tag)}other{Periode (# Tage)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positiv"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Hoch"</string>
@@ -1085,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"App-Quellen bearbeiten"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Standard-App bei diesem Gerät"</string>
     <string name="app_data_title" msgid="6499967982291000837">"App-Daten"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Daten aus <xliff:g id="APP_NAME">%1$s</xliff:g> werden hier angezeigt"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Daten aus Apps mit Zugriff auf Health Connect werden hier angezeigt"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Tag"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Woche"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Monat"</string>
@@ -1134,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Ausgewählte „<xliff:g id="APP_NAME">%1$s</xliff:g>“-Einträge für die Woche vom <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> endgültig löschen?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ausgewählte „<xliff:g id="APP_NAME">%1$s</xliff:g>“-Einträge für <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> endgültig löschen?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Diesen „<xliff:g id="APP_NAME">%s</xliff:g>“-Eintrag endgültig löschen?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Daten vom Typ „<xliff:g id="DATA_TYPE">%1$s</xliff:g>“ für <xliff:g id="APP_NAME">%2$s</xliff:g> endgültig löschen?"</string>
 </resources>
