--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> δεν θα έχει πλέον δυνατότητα ανάγνωσης ή εγγραφής δεδομένων από το Health Connect, συμπεριλαμβανομένων των δεδομένων παρασκηνίου και των παλαιότερων δεδομένων.\n\nΑυτό δεν επηρεάζει άλλες άδειες που ενδέχεται να έχει αυτή η εφαρμογή, όπως άδειες για την κάμερα, το μικρόφωνο ή την τοποθεσία."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Να διαγραφούν επίσης από το Health Connect τα δεδομένα φυσικής κατάστασης και οι ιατρικοί φάκελοι από την εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Οι άδειες για αυτή την εφαρμογή καταργήθηκαν"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Να διαγραφούν επίσης όλα τα δεδομένα του Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Επόμενη ημέρα"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Επιλεγμένη ημέρα"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Προηγούμενη ημέρα"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Επεξεργασία πηγών εφαρμογών"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Προεπιλογή συσκευής"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Δεδομένα εφαρμογών"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Τα δεδομένα από την εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> θα εμφανίζονται εδώ"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Τα δεδομένα από εφαρμογές με πρόσβαση στο Health Connect θα εμφανίζονται εδώ"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Ημέρα"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Εβδομάδα"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Μήνας"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Οριστική διαγραφή των επιλεγμένων καταχωρίσεων της εφαρμογής <xliff:g id="APP_NAME">%1$s</xliff:g> για την εβδομάδα <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>;"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Οριστική διαγραφή των επιλεγμένων καταχωρίσεων της εφαρμογής <xliff:g id="APP_NAME">%1$s</xliff:g> για τον μήνα <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>;"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Οριστική διαγραφή αυτής της καταχώρισης της εφαρμογής <xliff:g id="APP_NAME">%s</xliff:g>;"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Να διαγραφούν οριστικά τα δεδομένα <xliff:g id="DATA_TYPE">%1$s</xliff:g> για την εφαρμογή <xliff:g id="APP_NAME">%2$s</xliff:g>;"</string>
 </resources>
