--- a/apk/res/values-en-rCA/strings.xml
+++ b/apk/res/values-en-rCA/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> will no longer be able to read or write data from Health Connect, including background and past data.\n\nThis doesn\'t affect other permissions this app may have, like camera, microphone or location."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Also delete fitness data and health records from <xliff:g id="APP_NAME">%1$s</xliff:g> from Health Connect"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Removed permissions for this app"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Also delete all Health Connect data"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Next day"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Selected day"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Previous day"</string>
