--- a/apk/res/values-et/strings.xml
+++ b/apk/res/values-et/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ei saa edaspidi Health Connecti andmeid (sh taustaandmeid ja varasemaid andmeid) lugeda ega kirjutada.\n\nSee ei mõjuta rakenduse teisi lubasid, näiteks kaamerale, mikrofonile ja asukohale juurdepääsemise lubasid."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Kustutage Health Connectist ka rakenduse <xliff:g id="APP_NAME">%1$s</xliff:g> treeningu- ja terviseandmed"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Selle rakenduse load on eemaldatud"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Kustuta ka kõik Health Connecti andmed"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Järgmine päev"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Valitud päev"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Eelmine päev"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Rakendusallikate muutmine"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Seadme vaikeseade"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Rakenduse andmed"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Rakenduse <xliff:g id="APP_NAME">%1$s</xliff:g> andmed kuvatakse siin"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Nende rakenduste andmed, millel on juurdepääs teenusele Health Connect, kuvatakse siin"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Päev"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Nädal"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Kuu"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Kas kustutada valitud rakenduse <xliff:g id="APP_NAME">%1$s</xliff:g> nädala <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> kirjed jäädavalt?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Kas kustutada valitud rakenduse <xliff:g id="APP_NAME">%1$s</xliff:g> kuu <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> kirjed jäädavalt?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Kas kustutada see rakenduse <xliff:g id="APP_NAME">%s</xliff:g> kirje jäädavalt?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Kas kustutada rakenduse <xliff:g id="APP_NAME">%2$s</xliff:g> kategooria <xliff:g id="DATA_TYPE">%1$s</xliff:g> andmed?"</string>
 </resources>
