--- a/apk/res/values-fr-rCA/strings.xml
+++ b/apk/res/values-fr-rCA/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Gérez les données de santé et d\'activité physique sur votre téléphone, et contrôlez les applis qui peuvent y accéder"</string>
     <string name="data_title" msgid="4456619761533380816">"Données et accès"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Consulter les dossiers médicaux"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Consulter vos dossiers médicaux et les applis qui peuvent y accéder"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Toutes les catégories"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Afficher toutes les catégories"</string>
     <string name="no_data" msgid="1906986019249068659">"Aucune donnée"</string>
@@ -333,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Lorsque vous accordez l\'accès à la lecture des données, l\'appli peut lire les nouvelles données et celles des 30 derniers jours"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Lorsque vous accordez l\'accès à la lecture des données, l\'appli peut lire les nouvelles données et les données antérieures"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à accéder à Connexion santé?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Vous pouvez découvrir comment <xliff:g id="APP_NAME">%1$s</xliff:g> traite vos données en consultant sa <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"politique de confidentialité"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à accéder à vos dossiers médicaux?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Si vous donnez l\'accès, l\'appli pourra lire et écrire des données telles que les allergies, les résultats de laboratoire, les vaccins et plus encore\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"À propos des dossiers médicaux"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Données à partager"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Si vous l\'autorisez, <xliff:g id="APP_NAME">%1$s</xliff:g> pourra partager vos dossiers médicaux avec Connexion santé."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Synchronisez vos dossiers médicaux à partir de vos différentes applis et sources pour les conserver au même endroit"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Retirer toutes les autorisations?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Tout retirer"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne pourra plus lire ni écrire de données dans Connexion santé.\n\nCela n\'a aucune incidence sur d\'autres autorisations dont peut disposer cette appli, comme celles relatives à l\'appareil photo, au microphone ou à la position."</string>
@@ -370,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne pourra plus lire ni écrire de données dans Connexion santé, y compris les données en arrière-plan et antérieures.\n\nCela n\'a aucune incidence sur d\'autres autorisations dont peut disposer cette appli, comme l\'appareil photo, le microphone ou la position."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Supprimer également les données d\'activité physique et les dossiers médicaux de <xliff:g id="APP_NAME">%1$s</xliff:g> dans Connexion santé"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Autorisations retirées pour cette appli"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Supprimer également toutes les données de Connexion santé"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Jour suivant"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Jour sélectionné"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Jour précédent"</string>
@@ -410,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Accès des applis"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Aucune appli compatible n\'est actuellement installée"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Accès supplémentaire"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Données passées, données en arrière-plan"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Autorisations supplémentaires retirées pour cette appli"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Autorisations"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Mise en forme et bien-être"</string>
@@ -612,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Saignement léger"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Saignement moyen"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Saignement abondant"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Flux inconnu"</string>
     <string name="period_day" msgid="3821944462093965882">"Jour <xliff:g id="DAY">%1$d</xliff:g> de <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> des menstruations"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Menstruations (1 jour)}one{Menstruations (# jour)}other{Menstruations (# jours)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positif"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Négatif"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Élevé"</string>
@@ -1085,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Modifier les sources d\'applis"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Valeur par défaut de l\'appareil"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Données de l\'appli"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Les données provenant de <xliff:g id="APP_NAME">%1$s</xliff:g> s\'afficheront ici"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Les données des applis qui ont accès à Connexion santé s\'afficheront ici"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Jour"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Semaine"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mois"</string>
@@ -1134,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Supprimer définitivement les entrées <xliff:g id="APP_NAME">%1$s</xliff:g> sélectionnées pour la semaine du <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Supprimer définitivement les entrées <xliff:g id="APP_NAME">%1$s</xliff:g> sélectionnées pour <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Supprimer définitivement cette entrée <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Supprimer définitivement les données « <xliff:g id="DATA_TYPE">%1$s</xliff:g> » pour <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
