--- a/apk/res/values-gl/strings.xml
+++ b/apk/res/values-gl/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Xestiona os datos de saúde e actividade física no dispositivo, e controla que aplicacións poden acceder a eles"</string>
     <string name="data_title" msgid="4456619761533380816">"Datos e acceso"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Consultar rexistros de información sanitaria"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Consulta os teus rexistros de información sanitaria e que aplicacións poden acceder a eles"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Todas as categorías"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Ver todas as categorías"</string>
     <string name="no_data" msgid="1906986019249068659">"Sen datos"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> xa non poderá ler nin escribir datos de Saúde conectada, incluídos os datos anteriores e en segundo plano.\n\nEsta acción non lles afecta a outros permisos que poida ter esta aplicación, como os de acceso á localización, á cámara ou ao micrófono."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Eliminar tamén de Saúde conectada os datos de actividade física e os rexistros de información sanitaria de <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Quitáronse os permisos para esta aplicación"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Eliminar tamén todos os datos de Saúde conectada"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Día seguinte"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Día seleccionado"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Día anterior"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Acceso da aplicación"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Nestes momentos non tes instalada ningunha aplicación compatible"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Acceso adicional"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Datos anteriores, datos en segundo plano"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Quitáronse os permisos adicionais para esta aplicación"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Permisos"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Forma física e benestar"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Sangrado leve"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Sangrado medio"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Sangrado abundante"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Fluxo descoñecido"</string>
     <string name="period_day" msgid="3821944462093965882">"Día do período menstrual: <xliff:g id="DAY">%1$d</xliff:g> de <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Período (1 día)}other{Período (# días)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positivo"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativo"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Alta"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Editar fontes de aplicacións"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Predeterminada do dispositivo"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Datos da aplicación"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Os datos de <xliff:g id="APP_NAME">%1$s</xliff:g> mostraranse aquí"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Os datos das aplicacións con acceso a Saúde conectada mostraranse aquí"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Día"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Semana"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mes"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Queres eliminar de forma permanente as entradas seleccionadas de <xliff:g id="APP_NAME">%1$s</xliff:g> da seguinte semana: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Queres eliminar de forma permanente as entradas seleccionadas de <xliff:g id="APP_NAME">%1$s</xliff:g> de <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Queres eliminar de forma permanente esta entrada de <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Queres eliminar permanentemente de <xliff:g id="APP_NAME">%2$s</xliff:g> os datos referentes ao seguinte: <xliff:g id="DATA_TYPE">%1$s</xliff:g>?"</string>
 </resources>
