--- a/apk/res/values-hu/strings.xml
+++ b/apk/res/values-hu/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Kezelheti az egészségével és a fitnesztevékenységeivel kapcsolatos adatokat az eszközén, és szabályozhatja, hogy mely alkalmazások férhetnek hozzájuk."</string>
     <string name="data_title" msgid="4456619761533380816">"Adatok és hozzáférés"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Az egészségügyi nyilvántartás böngészése"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Megtekintheti az egészségügyi adatait és azt, hogy mely alkalmazások férhetnek hozzájuk."</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Minden kategória"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Minden kategória megtekintése"</string>
     <string name="no_data" msgid="1906986019249068659">"Nincs adat"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> a továbbiakban nem olvashatja vagy írhatja a Health Connect szolgáltatásban tárolt (például háttér- vagy korábbi) adatokat.\n\nEz nem befolyásolja azokat az egyéb (például a kamerához, a mikrofonhoz vagy a helyadatokhoz tartozó) engedélyeket, amelyekkel ez az alkalmazás esetleg rendelkezik."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"A(z) <xliff:g id="APP_NAME">%1$s</xliff:g> alkalmazásból származó fitneszadatok és egészségügyi nyilvántartás törlése a Health Connect szolgáltatásból"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Az alkalmazásra vonatkozó engedélyek visszavonva"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Az összes Health Connect-adat is legyen törölve"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Következő nap"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Kiválasztott nap"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Előző nap"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Alkalmazás-hozzáférés"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Jelenleg nincs kompatibilis alkalmazás telepítve"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"További hozzáférés"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Korábbi adatok, háttéradatok"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Az alkalmazásra vonatkozó további engedélyek visszavonva"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Engedélyek"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fittség és jóllét"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Enyhe vérzés"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Közepes vérzés"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Erős vérzés"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Ismeretlen folyás"</string>
     <string name="period_day" msgid="3821944462093965882">"Menstruáció napja: <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>/<xliff:g id="DAY">%1$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Menstruáció (1 nap)}other{Menstruáció (# nap)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Pozitív"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negatív"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Magas"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Alkalmazásforrások szerkesztése"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Alapértelmezett"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Alkalmazásadatok"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Itt jelennek majd meg a(z) <xliff:g id="APP_NAME">%1$s</xliff:g> adatai"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Itt jelennek meg az adatok azokból az alkalmazásokból, amelyek hozzáférnek a Health Connecthez"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Nap"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Hét"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Hónap"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Véglegesen törli a kijelölt <xliff:g id="APP_NAME">%1$s</xliff:g>-bejegyzéseket a következő hétre vonatkozóan: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Véglegesen törli a kijelölt <xliff:g id="APP_NAME">%1$s</xliff:g>-bejegyzéseket a következő hónapra vonatkozóan: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Véglegesen törli a(z) <xliff:g id="APP_NAME">%s</xliff:g> bejegyzését?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Véglegesen törli a következőhöz tartozó <xliff:g id="DATA_TYPE">%1$s</xliff:g> típusú adatokat: <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
