--- a/apk/res/values-hy/strings.xml
+++ b/apk/res/values-hy/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Կառավարեք առողջության և ֆիզիկական ակտիվության տվյալները ձեր սարքում և ընտրեք, թե որ հավելվածներին կարող են դրանք հասանելի լինել"</string>
     <string name="data_title" msgid="4456619761533380816">"Տվյալներ և հասանելիություն"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Դիտել առողջության մասին տեղեկությունները"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Դիտել առողջության մասին տեղեկությունները և հավելվածները, որոնց հասանելի են այդ տվյալները"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Բոլոր կատեգորիաները"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Տեսնել բոլոր կատեգորիաները"</string>
     <string name="no_data" msgid="1906986019249068659">"Տվյալներ չկան"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> հավելվածն այլևս չի կարողանա տվյալներ կարդալ կամ գրանցել Health Connect-ում, այդ թվում՝ տվյալներ փոխանակել ֆոնային ռեժիմում։\n\nՍա չի ազդի այս հավելվածի մյուս թույլտվությունների վրա, օրինակ՝ տեղորոշման, տեսախցիկի կամ խոսափողի։"</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Health Connect-ից նաև ջնջել <xliff:g id="APP_NAME">%1$s</xliff:g> հավելվածի գրանցած՝ ֆիզիկական ակտիվության տվյալները և առողջության մասին տեղեկությունները։"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Այս հավելվածի թույլտվությունները հեռացվեցին"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Նաև ջնջել Health Connect-ի բոլոր տվյալները"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Հաջորդ օրը"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Ընտրված օրը"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Նախորդ օրը"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Հասանելիություն հավելվածների համար"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Դուք այս պահին չունեք տեղադրված համատեղելի հավելվածներ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Լրացուցիչ թույլտվություններ"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Նախկին տվյալներ, ֆոնային տվյալներ"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Այս հավելվածի համար լրացուցիչ թույլտվությունները հեռացվել են։"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Թույլտվություններ"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Ֆիթնես և առողջություն"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Թույլ արտազատում"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Միջին արտազատում"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Ուժեղ արտազատում"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Անհայտ"</string>
     <string name="period_day" msgid="3821944462093965882">"Դաշտանի օր <xliff:g id="DAY">%1$d</xliff:g>՝ <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>-ից"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Դաշտան (1 օր)}one{Դաշտան (# օր)}other{Դաշտան (# օր)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Դրական"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Բացասական"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Բարձր"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Հավելվածների աղբյուրների փոփոխում"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Կանխադրված տարբերակ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Հավելվածի տվյալներ"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Այստեղ կցուցադրվեն տվյալներ <xliff:g id="APP_NAME">%1$s</xliff:g> հավելվածից"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect-ի հասանելիություն ունեցող հավելվածների տվյալները կցուցադրվեն այստեղ"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Օր"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Շաբաթ"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Ամիս"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Ընդմիշտ ջնջե՞լ <xliff:g id="APP_NAME">%1$s</xliff:g> հավելվածում <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ժամանակահատվածի ընտրված գրառումները"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ընդմիշտ ջնջե՞լ <xliff:g id="APP_NAME">%1$s</xliff:g> հավելվածում <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ժամանակահատվածի ընտրված գրառումները"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Ընդմիշտ ջնջե՞լ <xliff:g id="APP_NAME">%s</xliff:g> հավելվածում կատարած այս գրառումը"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Ընդմիշտ ջնջե՞լ ընտրված տվյալները (<xliff:g id="DATA_TYPE">%1$s</xliff:g>) <xliff:g id="APP_NAME">%2$s</xliff:g> հավելվածի համար"</string>
 </resources>
