--- a/apk/res/values-in/strings.xml
+++ b/apk/res/values-in/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Kelola data kesehatan dan kebugaran di perangkat, dan kontrol aplikasi yang dapat mengaksesnya"</string>
     <string name="data_title" msgid="4456619761533380816">"Data dan akses"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Cari catatan kesehatan"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Lihat catatan kesehatan Anda dan aplikasi mana yang dapat mengaksesnya"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Semua kategori"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Lihat semua kategori"</string>
     <string name="no_data" msgid="1906986019249068659">"Tidak ada data"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> tidak dapat lagi membaca atau menulis data dari Health Connect, termasuk data latar belakang dan data lama.\n\nHal ini tidak memengaruhi izin lain yang mungkin dimiliki aplikasi ini, seperti kamera, mikrofon, atau lokasi."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Hapus juga data kebugaran dan catatan kesehatan dari <xliff:g id="APP_NAME">%1$s</xliff:g> dari Health Connect"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Izin dihapus untuk aplikasi ini"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Hapus juga semua data Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Hari berikutnya"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Hari dipilih"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Hari sebelumnya"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Akses aplikasi"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Anda saat ini tidak memiliki aplikasi terinstal yang kompatibel"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Akses tambahan"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Data lama, data latar belakang"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Menghapus izin tambahan untuk aplikasi ini"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Izin"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Kebugaran dan kesehatan"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Ringan"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Sedang"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Deras"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Aliran darah tidak diketahui"</string>
     <string name="period_day" msgid="3821944462093965882">"Menstruasi hari <xliff:g id="DAY">%1$d</xliff:g> dari <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Menstruasi (1 hari)}other{Menstruasi (# hari)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positif"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negatif"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Tinggi"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Edit sumber aplikasi"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Default perangkat"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Data aplikasi"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Data dari <xliff:g id="APP_NAME">%1$s</xliff:g> akan muncul di sini"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Data dari aplikasi yang memiliki akses ke Health Connect akan muncul di sini"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Hari"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Minggu"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Bulan"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Hapus permanen entri <xliff:g id="APP_NAME">%1$s</xliff:g> yang dipilih untuk minggu <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Hapus permanen entri <xliff:g id="APP_NAME">%1$s</xliff:g> yang dipilih untuk bulan <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Hapus permanen entri <xliff:g id="APP_NAME">%s</xliff:g> ini?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Hapus permanen data <xliff:g id="DATA_TYPE">%1$s</xliff:g> untuk <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
