--- a/apk/res/values-it/strings.xml
+++ b/apk/res/values-it/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Gestisci i dati relativi alla salute e all\'attività fisica sul dispositivo e stabilisci a quali app concedere l\'accesso"</string>
     <string name="data_title" msgid="4456619761533380816">"Dati e accesso"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Sfoglia i riepiloghi salute"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Visualizza i tuoi riepiloghi salute e quali app possono accedervi"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Tutte le categorie"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Vedi tutte le categorie"</string>
     <string name="no_data" msgid="1906986019249068659">"Nessun dato"</string>
@@ -333,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Se concedi l\'accesso in lettura, l\'app può leggere i nuovi dati e quelli degli ultimi 30 giorni"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Se concedi l\'accesso in lettura, l\'app può leggere i dati nuovi e precedenti"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Vuoi consentire all\'app <xliff:g id="APP_NAME">%1$s</xliff:g> di accedere a Connessione Salute?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Per sapere in che modo l\'app <xliff:g id="APP_NAME">%1$s</xliff:g> tratta i tuoi dati, consulta le sue <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>"</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"norme sulla privacy"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Vuoi consentire all\'app <xliff:g id="APP_NAME">%1$s</xliff:g> di accedere ai tuoi riepiloghi salute?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Se concedi l\'accesso, l\'app può leggere e scrivere dati quali allergie, risultati di laboratorio, vaccini e altro\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Informazioni sui riepiloghi salute"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Dati da condividere"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Se lo consenti, <xliff:g id="APP_NAME">%1$s</xliff:g> può condividere i tuoi riepiloghi salute con Connessione Salute."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Sincronizza i tuoi riepiloghi salute da diverse app e fonti per conservarli in un unico posto"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Rimuovere tutte le autorizzazioni?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Rimuovi tutto"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> non potrà più leggere o scrivere dati da Connessione Salute.\n\nL\'operazione non inciderà su eventuali altre autorizzazioni dell\'app, come fotocamera, microfono o posizione."</string>
@@ -370,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> non potrà più leggere o scrivere dati da Connessione Salute, inclusi i dati in background e precedenti.\n\nL\'operazione non inciderà su eventuali altre autorizzazioni dell\'app, come fotocamera, microfono o posizione."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Elimina anche i dati relativi all\'attività fisica e i riepiloghi salute di <xliff:g id="APP_NAME">%1$s</xliff:g> da Connessione Salute"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Autorizzazioni rimosse per questa app"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Elimina anche tutti i dati di Connessione Salute"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Giorno successivo"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Giorno selezionato"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Giorno precedente"</string>
@@ -410,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Accesso dell\'app"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Al momento non hai app compatibili installate"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Accesso aggiuntivo"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Dati precedenti, dati in background"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Autorizzazioni aggiuntive rimosse per questa app"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Autorizzazioni"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness e benessere"</string>
@@ -612,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Flusso leggero"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Flusso medio"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Flusso abbondante"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Flusso sconosciuto"</string>
     <string name="period_day" msgid="3821944462093965882">"Giorno del periodo mestruale <xliff:g id="DAY">%1$d</xliff:g> di <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Mestruazioni (1 giorno)}other{Mestruazioni (# giorni)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Positivo"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativo"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Alta"</string>
@@ -1085,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Modifica origini di app"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Opzione predefinita"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Dati dell\'app"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"I dati di <xliff:g id="APP_NAME">%1$s</xliff:g> verranno mostrati qui"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"I dati delle app con accesso a Connessione Salute verranno mostrati qui"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Giorno"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Settimana"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Mese"</string>
@@ -1134,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Eliminare definitivamente le voci selezionate dell\'app <xliff:g id="APP_NAME">%1$s</xliff:g> per la settimana (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>)?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Eliminare definitivamente le voci selezionate dell\'app <xliff:g id="APP_NAME">%1$s</xliff:g> per il giorno <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Eliminare definitivamente questa voce dell\'app <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Eliminare definitivamente i dati di <xliff:g id="DATA_TYPE">%1$s</xliff:g> per <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
