--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ניהול נתוני הבריאות והכושר במכשיר, ובחירה האפליקציות שיכולות לגשת לנתונים"</string>
     <string name="data_title" msgid="4456619761533380816">"נתונים וגישה"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"עיון בסיכום המצב הבריאותי"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"צפייה בסיכומים של המצב הבריאותי שלך והצגת האפליקציות שיכולות לגשת אליהם"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"כל הקטגוריות"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"הצגת כל הקטגוריות"</string>
     <string name="no_data" msgid="1906986019249068659">"אין נתונים"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"אפליקציית <xliff:g id="APP_NAME">%1$s</xliff:g> לא תוכל יותר לקרוא או לכתוב נתונים ב-Health Connect, כולל נתוני רקע ונתונים קודמים.\n\nהשינוי לא משפיע על הרשאות אחרות שעשויות להיות לאפליקציה הזו, כמו המצלמה, המיקרופון או הרשאות המיקום."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"אני רוצה למחוק מ-Health Connect גם את הנתונים של אימוני הכושר ואת סיכום המצב הבריאותי מ-<xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"הוסרו ההרשאות של האפליקציה הזו"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"אני רוצה למחוק גם את כל הנתונים של Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"מעבר ליום הבא"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"היום שנבחר"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ליום הקודם"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"גישה לאפליקציות"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"כרגע אין לך אפליקציות תואמות מותקנות"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"הרשאת גישה נוספת"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"נתונים קודמים, נתוני רקע"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"הוסרו הרשאות נוספות של האפליקציה הזו"</string>
     <string name="permissions_header" msgid="6519976063360071569">"הרשאות"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"כושר ובריאות"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"דימום חלש"</string>
     <string name="flow_medium" msgid="3783688724668943154">"דימום בינוני"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"דימום חזק"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"דימום לא ידוע"</string>
     <string name="period_day" msgid="3821944462093965882">"יום <xliff:g id="DAY">%1$d</xliff:g> של הווסת מתוך <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{המחזור החודשי (יום אחד)}one{המחזור החודשי (# ימים)}two{המחזור החודשי (יומיים)}other{המחזור החודשי (# ימים)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"תוצאה חיובית"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"תוצאה שלילית"</string>
     <string name="ovulation_high" msgid="205362931427158291">"תוצאה גבוהה"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"עריכת המקורות של האפליקציות"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ברירת המחדל של המכשיר"</string>
     <string name="app_data_title" msgid="6499967982291000837">"נתוני האפליקציה"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"כאן יופיעו נתונים מהאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"כאן יופיעו נתונים מאפליקציות שיש להן גישה ל-Health Connect"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"יום"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"שבוע"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"חודש"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"למחוק סופית את רשומות <xliff:g id="APP_NAME">%1$s</xliff:g> שנבחרו מהשבוע של <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"למחוק סופית את רשומות <xliff:g id="APP_NAME">%1$s</xliff:g> שנבחרו מחודש <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"למחוק סופית את הרשומה הזו של <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"למחוק לתמיד את הנתונים מסוג <xliff:g id="DATA_TYPE">%1$s</xliff:g> של <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
