--- a/apk/res/values-ja/strings.xml
+++ b/apk/res/values-ja/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> は、バックグラウンド データや過去のデータを含め、ヘルスコネクトのデータの読み取り、書き込みを行えなくなります。\n\nこの設定は、カメラ、マイク、位置情報など、このアプリのその他の権限には影響しません。"</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"<xliff:g id="APP_NAME">%1$s</xliff:g> のフィットネス データと医療記録もヘルスコネクトから削除する"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"このアプリの権限を削除しました"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"ヘルスコネクトのデータもすべて削除する"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"翌日"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"選択した日"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"前日"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"アプリのソースを編集する"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"デバイスのデフォルト"</string>
     <string name="app_data_title" msgid="6499967982291000837">"アプリデータ"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> からのデータがここに表示されます"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"ヘルスコネクトにアクセスできるアプリのデータがここに表示されます"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"日"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"週"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"月"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>の週の <xliff:g id="APP_NAME">%1$s</xliff:g> の選択したエントリを完全に削除しますか？"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>の <xliff:g id="APP_NAME">%1$s</xliff:g> の選択したエントリを完全に削除しますか？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> のこのエントリを完全に削除しますか？"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> の <xliff:g id="DATA_TYPE">%1$s</xliff:g> のデータを完全に削除しますか？"</string>
 </resources>
