--- a/apk/res/values-ka/strings.xml
+++ b/apk/res/values-ka/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ვეღარ შეძლებს Health Connect-ის მონაცემების, მათ შორის, ფონური და ძველი მონაცემების, წაკითხვას ან ჩაწერას.\n\nეს გავლენას არ მოახდენს სხვა ნებართვებზე, რომლებიც ამ აპს შეიძლება ჰქონდეს, მაგალითად კამერაზე, მიკროფონზე ან მდებარეობაზე."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"ფიტნესის მონაცემები და ჯანმრთელობის ჩანაწერებიც წაშალეთ Health Connect-ის <xliff:g id="APP_NAME">%1$s</xliff:g> აპიდან"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"ამ აპის ნებართვები ამოიშალა"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"ასევე Health Connect-ის ყველა მონაცემის წაშლა"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"შემდეგი დღე"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"შერჩეული დღე"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"წინა დღე"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"აპების წყაროების რედაქტირება"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"მოწყობილობის ნაგულისხმევი"</string>
     <string name="app_data_title" msgid="6499967982291000837">"აპის მონაცემები"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"მონაცემები <xliff:g id="APP_NAME">%1$s</xliff:g>-იდან აქ გამოჩნდება"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"მონაცემები იმ აპებიდან, რომლებსაც Health Connect-ზე აქვთ წვდომა, აქ გამოჩნდება"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"დღე"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"კვირა"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"თვე"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"გსურთ <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>-ის კვირისთვის <xliff:g id="APP_NAME">%1$s</xliff:g>-ის არჩეული შენატანების სამუდამოდ წაშლა?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"გსურთ <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>-ისთვის <xliff:g id="APP_NAME">%1$s</xliff:g>-ის არჩეული შენატანების სამუდამოდ წაშლა?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"გსურთ ამ <xliff:g id="APP_NAME">%s</xliff:g>-ის შენატანის სამუდამოდ წაშლა?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"გსურთ <xliff:g id="DATA_TYPE">%1$s</xliff:g> მონაცემების სამუდამოდ წაშლა <xliff:g id="APP_NAME">%2$s</xliff:g>-ისთვის?"</string>
 </resources>
