--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"គ្រប់គ្រងទិន្នន័យសុខភាព និងសម្បទានៅលើឧបករណ៍របស់អ្នក និងគ្រប់គ្រងថាតើកម្មវិធីណាខ្លះអាចចូលប្រើទិន្នន័យនេះបាន"</string>
     <string name="data_title" msgid="4456619761533380816">"ទិន្នន័យ និងការចូលប្រើ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"រុករកកំណត់ត្រាសុខភាព"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"មើលកំណត់ត្រាសុខភាពរបស់អ្នក និងកម្មវិធីណាខ្លះដែលអាចចូលប្រើកំណត់ត្រាទាំងនោះបាន"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"គ្រប់ប្រភេទ"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"មើលប្រភេទទាំងអស់"</string>
     <string name="no_data" msgid="1906986019249068659">"គ្មាន​ទិន្នន័យទេ"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> នឹងមិនអាចអាន ឬសរសេរទិន្នន័យពី Health Connect រួមទាំងទិន្នន័យពីមុន និងផ្ទៃខាងក្រោយបានទៀតទេ។\n\nសកម្មភាពនេះមិនប៉ះពាល់ដល់ការអនុញ្ញាតផ្សេងទៀត​ដែលកម្មវិធីនេះអាចមាន ដូចជាកាមេរ៉ា មីក្រូហ្វូន ឬទីតាំងទេ។"</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"លុបទិន្នន័យ​សម្បទា និងកំណត់ត្រាសុខភាពពី <xliff:g id="APP_NAME">%1$s</xliff:g> ចេញពី Health Connect ផងដែរ"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"បានដកការអនុញ្ញាតចេញសម្រាប់កម្មវិធីនេះ"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"លុបទិន្នន័យ Health Connect ទាំងអស់ផងដែរ"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"ថ្ងៃ​បន្ទាប់"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"ថ្ងៃដែលបានជ្រើសរើស"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ថ្ងៃ​មុន"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"សិទ្ធិចូលប្រើកម្មវិធី"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"បច្ចុប្បន្ននេះ អ្នកមិនបានដំឡើង​កម្មវិធីដែលត្រូវគ្នាទេ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"សិទ្ធិ​ចូល​ប្រើបន្ថែម"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"ទិន្នន័យពីមុន ទិន្នន័យ​ផ្ទៃ​ខាង​ក្រោយ"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"បានដកការអនុញ្ញាតបន្ថែមចេញសម្រាប់កម្មវិធីនេះ"</string>
     <string name="permissions_header" msgid="6519976063360071569">"ការអនុញ្ញាត"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"សម្បទា និងសុខុមាលភាព"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"ការធ្លាក់រដូវតិច"</string>
     <string name="flow_medium" msgid="3783688724668943154">"ការធ្លាក់រដូវមធ្យម"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"ការធ្លាក់រដូវច្រើន"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"លំហូរដែលមិនស្គាល់"</string>
     <string name="period_day" msgid="3821944462093965882">"រដូវថ្ងៃទី <xliff:g id="DAY">%1$d</xliff:g> នៃ <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{រយៈពេល (1 ថ្ងៃ)}other{រយៈពេល (# ថ្ងៃ)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"វិជ្ជមាន"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"អវិជ្ជមាន"</string>
     <string name="ovulation_high" msgid="205362931427158291">"ខ្ពស់"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"កែប្រភពកម្មវិធី"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"លំនាំដើម​របស់ឧបករណ៍"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ទិន្នន័យកម្មវិធី"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"ទិន្នន័យពី <xliff:g id="APP_NAME">%1$s</xliff:g> នឹងបង្ហាញនៅទីនេះ"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"ទិន្នន័យពីកម្មវិធីដែលមានសិទ្ធិចូលប្រើប្រាស់ Health Connect នឹងបង្ហាញនៅទីនេះ"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"ថ្ងៃ"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"សប្ដាហ៍"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"ខែ"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់សប្តាហ៍នៃថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ឬ?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់ខែ<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ឬ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"លុបធាតុ <xliff:g id="APP_NAME">%s</xliff:g> នេះជាអចិន្ត្រៃយ៍ឬ?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"លុបទិន្នន័យ<xliff:g id="DATA_TYPE">%1$s</xliff:g>សម្រាប់ <xliff:g id="APP_NAME">%2$s</xliff:g> ជាអចិន្ត្រៃយ៍ឬ?"</string>
 </resources>
