--- a/apk/res/values-lo/strings.xml
+++ b/apk/res/values-lo/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ຈັດການຂໍ້ມູນສຸຂະພາບ ແລະ ການອອກກຳລັງກາຍຢູ່ອຸປະກອນຂອງທ່ານ ແລະ ຄວບຄຸມວ່າແອັບໃດສາມາດເຂົ້າເຖິງຂໍ້ມູນໄດ້"</string>
     <string name="data_title" msgid="4456619761533380816">"ຂໍ້ມູນ ແລະ ສິດເຂົ້າເຖິງ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"ເລືອກເບິ່ງຂໍ້ມູນສຸຂະພາບ"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"ເບິ່ງຂໍ້ມູນສຸຂະພາບ ແລະ ເບິ່ງວ່າແອັບໃດສາມາດເຂົ້າເຖິງພວກມັນໄດ້"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"ໝວດໝູ່ທັງໝົດ"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"ເບິ່ງໝວດໝູ່ທັງໝົດ"</string>
     <string name="no_data" msgid="1906986019249068659">"ບໍ່ມີຂໍ້ມູນ"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ຈະບໍ່ສາມາດອ່ານ ຫຼື ຂຽນຂໍ້ມູນຈາກ Health Connect ໄດ້ອີກຕໍ່ໄປ, ຮວມທັງຂໍ້ມູນພື້ນຫຼັງ ແລະ ຂໍ້ມູນທີ່ຜ່ານມາ.\n\nນີ້ຈະບໍ່ກະທົບກັບການອະນຸຍາດອື່ນທີ່ແອັບນີ້ອາດມີ, ເຊັ່ນ: ກ້ອງຖ່າຍຮູບ, ໄມໂຄຣໂຟນ ຫຼື ສະຖານທີ່."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"ລຶບຂໍ້ມູນຟິດເນສ ແລະ ຂໍ້ມູນສຸຂະພາບຈາກ <xliff:g id="APP_NAME">%1$s</xliff:g> ອອກຈາກ Health Connect ນຳ"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"ລຶບການອະນຸຍາດສຳລັບແອັບນີ້ອອກແລ້ວ"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"ລຶບຂໍ້ມູນ Health Connect ທັງໝົດນຳ"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"ມື້ຕໍ່ໄປ"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"ມື້ທີ່ເລືອກ"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ມື້ກ່ອນໜ້າ"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"ສິດເຂົ້າເຖິງແອັບ"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"ຕອນນີ້ທ່ານບໍ່ມີແອັບໃດທີ່ເຂົ້າກັນໄດ້ຕິດຕັ້ງໄວ້ເລີຍ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"ສິດເຂົ້າເຖິງເພີ່ມເຕີມ"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"ຂໍ້ມູນທີ່ຜ່ານມາ, ຂໍ້ມູນພື້ນຫຼັງ"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"ລຶບການອະນຸຍາດເພີ່ມເຕີມສຳລັບແອັບນີ້ອອກແລ້ວ"</string>
     <string name="permissions_header" msgid="6519976063360071569">"ການອະນຸຍາດ"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"ການອອກກຳລັງກາຍ ແລະ ສຸຂະພາບ"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"ໄຫຼໜ້ອຍ"</string>
     <string name="flow_medium" msgid="3783688724668943154">"ໄຫຼປານກາງ"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"ໄຫຼຫຼາຍ"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"ບໍ່ຮູ້ປະລິມານການໄຫຼ"</string>
     <string name="period_day" msgid="3821944462093965882">"ເປັນປະຈຳເດືອນມື້ທີ <xliff:g id="DAY">%1$d</xliff:g> ຈາກທັງໝົດ <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> ມື້"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{ປະຈຳເດືອນ (1 ມື້)}other{ປະຈຳເດືອນ (# ມື້)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"ຜົນບວກ"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"ຜົນລົບ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"ສູງ"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"ແກ້ໄຂແຫຼ່ງທີ່ມາຂອງແອັບ"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ຄ່າເລີ່ມຕົ້ນອຸປະກອນ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ຂໍ້ມູນແອັບ"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"ຂໍ້ມູນຈາກ <xliff:g id="APP_NAME">%1$s</xliff:g> ຈະສະແດງຢູ່ບ່ອນນີ້"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"ຂໍ້ມູນຈາກແອັບທີ່ມີສິດເຂົ້າເຖິງ Health Connect ຈະສະແດງຢູ່ບ່ອນນີ້"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"ມື້"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"ອາທິດ"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"ເດືອນ"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"ລຶບຂໍ້ມູນ <xliff:g id="APP_NAME">%1$s</xliff:g> ທີ່ເລືອກສຳລັບອາທິດ <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ອອກຢ່າງຖາວອນບໍ?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"ລຶບຂໍ້ມູນ <xliff:g id="APP_NAME">%1$s</xliff:g> ທີ່ເລືອກສຳລັບ <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ອອກຢ່າງຖາວອນບໍ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ລຶບຂໍ້ມູນ <xliff:g id="APP_NAME">%s</xliff:g> ນີ້ອອກຢ່າງຖາວອນບໍ?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"ລຶບຂໍ້ມູນ <xliff:g id="DATA_TYPE">%1$s</xliff:g> ສຳລັບ <xliff:g id="APP_NAME">%2$s</xliff:g> ບໍ?"</string>
 </resources>
