--- a/apk/res/values-my/strings.xml
+++ b/apk/res/values-my/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ကျန်းမာရေးနှင့် ကြံ့ခိုင်ရေးဒေတာကို သင့်စက်တွင် စီမံပြီး ၎င်းအားသုံးနိုင်သည့် အက်ပ်များကို သတ်မှတ်နိုင်သည်"</string>
     <string name="data_title" msgid="4456619761533380816">"ဒေတာနှင့် သုံးခွင့်"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"ကျန်းမာရေး မှတ်တမ်းများ ကြည့်ရန်"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"သင့်ကျန်းမာရေး မှတ်တမ်းနှင့် ၎င်းတို့ကို ဝင်သုံးနိုင်သည့် အက်ပ်များကို ကြည့်နိုင်သည်"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"အမျိုးအစားအားလုံး"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"အမျိုးအစားအားလုံး ကြည့်ရန်"</string>
     <string name="no_data" msgid="1906986019249068659">"ဒေတာမရှိပါ"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် နောက်ခံတွင်အသုံးပြုသောဒေတာနှင့် ယခင်ဒေတာ အပါအဝင် Health Connect မှ ဒေတာများကို ဖတ်နိုင် (သို့) ရေးနိုင်တော့မည် မဟုတ်ပါ။\n\n၎င်းသည် ဤအက်ပ်တွင်ရှိနိုင်သော ကင်မရာ၊ မိုက်ခရိုဖုန်း (သို့) တည်နေရာကဲ့သို့ အခြားခွင့်ပြုချက်များအပေါ် သက်ရောက်မှုမရှိပါ။"</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Health Connect မှ <xliff:g id="APP_NAME">%1$s</xliff:g> ရှိ ကြံ့ခိုင်မှု ဒေတာနှင့် ကျန်းမာရေး မှတ်တမ်းများကိုလည်း ဖျက်ရန်"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"ဤအက်ပ်အတွက် ခွင့်ပြုချက်များကို ဖယ်ရှားပြီးပါပြီ"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Health Connect ဒေတာအားလုံးကိုလည်း ဖျက်ရန်"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"နောက်ရက်"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"ရွေးထားသောနေ့"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ယခင်ရက်"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"အက်ပ်သုံးခွင့်"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"တွဲသုံးနိုင်သောအက်ပ်များကို လောလောဆယ် ထည့်သွင်းမထားပါ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"ထပ်ဆောင်းသုံးခွင့်"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"ယခင်ဒေတာ၊ နောက်ခံတွင်အသုံးပြုသောဒေတာ"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"ဤအက်ပ်အတွက် ထပ်ဆောင်းခွင့်ပြုချက်များကို ဖယ်ရှားထားသည်"</string>
     <string name="permissions_header" msgid="6519976063360071569">"ခွင့်ပြုချက်များ"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"ကျန်းမာကြံ့ခိုင်ရေး"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"အနည်းငယ် ဆင်းသည်"</string>
     <string name="flow_medium" msgid="3783688724668943154">"အလယ်အလတ် ဆင်းသည်"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"အများကြီး ဆင်းသည်"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"စီးဆင်းမှု မသိရပါ"</string>
     <string name="period_day" msgid="3821944462093965882">"ဓမ္မတာရက် <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> ရက်အနက် <xliff:g id="DAY">%1$d</xliff:g> ရက်"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{ဓမ္မတာ (၁ ရက်)}other{ဓမ္မတာ (# ရက်)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"ရှိသည်"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"မရှိပါ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"များ"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"အက်ပ်ရင်းမြစ်များ တည်းဖြတ်ရန်"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"စက်ပစ္စည်းမူရင်း"</string>
     <string name="app_data_title" msgid="6499967982291000837">"အက်ပ်ဒေတာ"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> မှ ဒေတာကို ဤနေရာတွင် ပြပါမည်"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect သုံးခွင့်ရှိသော အက်ပ်များမှ ဒေတာကို ဤနေရာတွင် ပြပါမည်"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"ရက်"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"သီတင်းပတ်"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"လ"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> အပတ်အတွက် ရွေးထားသော <xliff:g id="APP_NAME">%1$s</xliff:g> ထည့်သွင်းမှုများကို အပြီးဖျက်မလား။"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> အတွက် ရွေးထားသော <xliff:g id="APP_NAME">%1$s</xliff:g> ထည့်သွင်းမှုများကို အပြီးဖျက်မလား။"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ဤ <xliff:g id="APP_NAME">%s</xliff:g> ထည့်သွင်းမှုကို အပြီးဖျက်မလား။"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> အတွက် <xliff:g id="DATA_TYPE">%1$s</xliff:g> ဒေတာကို အပြီးဖျက်မလား။"</string>
 </resources>
