--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"ଆପଣଙ୍କ ଡିଭାଇସରେ ସ୍ୱାସ୍ଥ୍ୟ ଏବଂ ଫିଟନେସ ଡାଟାକୁ ପରିଚାଳନା କରନ୍ତୁ ଓ କେଉଁ ଆପ୍ସ ଏହାକୁ ଆକ୍ସେସ କରିପାରିବ ତାହା ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
     <string name="data_title" msgid="4456619761533380816">"ଡାଟା ଏବଂ ଆକ୍ସେସ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ବ୍ରାଉଜ କରନ୍ତୁ"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"ଆପଣଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡଗୁଡ଼ିକ ଏବଂ କେଉଁ ଆପ୍ସ ସେଗୁଡ଼ିକୁ ଆକ୍ସେସ କରିପାରିବ ତାହା ଭ୍ୟୁ କରନ୍ତୁ"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"ସମସ୍ତ ବର୍ଗ"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"ସମସ୍ତ ବର୍ଗ ଦେଖନ୍ତୁ"</string>
     <string name="no_data" msgid="1906986019249068659">"କୌଣସି ଡାଟା ନାହିଁ"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ବେକଗ୍ରାଉଣ୍ଡ ଏବଂ ପୂର୍ବର ଡାଟା ସମେତ Health Connectରୁ ଡାଟାକୁ ଆଉ ପଢ଼ିବା କିମ୍ବା ଲେଖିବା ପାଇଁ ସକ୍ଷମ ହେବ ନାହିଁ।\n\nଏହା ଏହି ଆପରେ ଥିବା କେମେରା, ମାଇକ୍ରୋଫୋନ କିମ୍ବା ଲୋକେସନ ପରି ଅନ୍ୟ ଅନୁମତିଗୁଡ଼ିକୁ ପ୍ରଭାବିତ କରେ ନାହିଁ।"</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Health Connectରୁ <xliff:g id="APP_NAME">%1$s</xliff:g>ରେ ଥିବା ଫିଟନେସ ଡାଟା ଏବଂ ସ୍ୱାସ୍ଥ୍ୟ ରେକର୍ଡ ମଧ୍ୟ ଡିଲିଟ କରେ"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"ଏହି ଆପରୁ ଅନୁମତିଗୁଡ଼ିକୁ କାଢ଼ି ଦିଆଯାଇଛି"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"ସମସ୍ତ Health Connect ଡାଟା ମଧ୍ୟ ଡିଲିଟ କରନ୍ତୁ"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"ପରବର୍ତ୍ତୀ ଦିନ"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"ଚୟନିତ ଦିନ"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ପୂର୍ବବର୍ତ୍ତୀ ଦିନ"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"ଆପ ଆକ୍ସେସ"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"ବର୍ତ୍ତମାନ ଆପଣଙ୍କର କୌଣସି କମ୍ପାଟିବଲ ଆପ୍ସ ଇନଷ୍ଟଲ କରାଯାଇନାହିଁ"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"ଅତିରିକ୍ତ ଆକ୍ସେସ"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"ଅତୀତର ଡାଟା, ବେକଗ୍ରାଉଣ୍ଡ ଡାଟା"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"ଏହି ଆପ ପାଇଁ ଅତିରିକ୍ତ ଅନୁମତିକୁ କାଢ଼ି ଦିଆଯାଇଛି"</string>
     <string name="permissions_header" msgid="6519976063360071569">"ଅନୁମତି"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"ଫିଟନେସ ଏବଂ ସୁସ୍ଥତା"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"ସାମାନ୍ୟ ରକ୍ତସ୍ରାବ"</string>
     <string name="flow_medium" msgid="3783688724668943154">"ମଧ୍ୟମ ରକ୍ତସ୍ରାବ"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"ଅତ୍ୟଧିକ ରକ୍ତସ୍ରାବ"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"ଅଜଣା ଫ୍ଲୋ"</string>
     <string name="period_day" msgid="3821944462093965882">"<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>ରୁ ଋତୁସ୍ରାବ ଅବଧିର ଦିନ <xliff:g id="DAY">%1$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{ଋତୁସ୍ରାବ ଅବଧି ଦିନ (1 ଦିନ)}other{ଋତୁସ୍ରାବ ଅବଧି ଦିନ (# ଦିନ)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"ପଜିଟିଭ"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"ନେଗେଟିଭ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"ଅଧିକ"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"ଆପ ସୋର୍ସଗୁଡ଼ିକୁ ଏଡିଟ କରନ୍ତୁ"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ଡିଭାଇସ୍ ଡିଫଲ୍ଟ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ଆପ ଡାଟା"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g>ରୁ ଡାଟା ଏଠାରେ ଦେଖାଯିବ"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connectକୁ ଆକ୍ସେସ ଥିବା ଆପ୍ସରୁ ଡାଟା ଏଠାରେ ଦେଖାଯିବ"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"ଦିନ"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"ସପ୍ତାହ"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"ମାସ"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>ର ସପ୍ତାହ ପାଇଁ ଚୟନିତ <xliff:g id="APP_NAME">%1$s</xliff:g> ଏଣ୍ଟ୍ରିଗୁଡ଼ିକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ପାଇଁ ଚୟନିତ <xliff:g id="APP_NAME">%1$s</xliff:g> ଏଣ୍ଟ୍ରିଗୁଡ଼ିକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ଏହି <xliff:g id="APP_NAME">%s</xliff:g> ଏଣ୍ଟ୍ରିକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> ପାଇଁ <xliff:g id="DATA_TYPE">%1$s</xliff:g> ଡାଟାକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
 </resources>
