--- a/apk/res/values-pa/strings.xml
+++ b/apk/res/values-pa/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ਹੁਣ ਬੈਕਗ੍ਰਾਊਂਡ ਅਤੇ ਪਿਛਲੇ ਡਾਟੇ ਸਮੇਤ, Health Connect ਤੋਂ ਡਾਟੇ ਨੂੰ ਪੜ੍ਹ ਜਾਂ ਲਿਖ ਨਹੀਂ ਸਕੇਗੀ।\n\nਇਸ ਨਾਲ ਐਪ ਦੀਆਂ ਕੈਮਰੇ, ਮਾਈਕ੍ਰੋਫ਼ੋਨ ਜਾਂ ਟਿਕਾਣੇ ਵਰਗੀਆਂ ਹੋਰ ਇਜਾਜ਼ਤਾਂ ਪ੍ਰਭਾਵਿਤ ਨਹੀਂ ਹੋਣਗੀਆਂ।"</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"<xliff:g id="APP_NAME">%1$s</xliff:g> \'ਤੇ ਮੌਜੂਦ ਤੰਦਰੁਸਤੀ ਸੰਬੰਧੀ ਡਾਟਾ ਅਤੇ ਸਿਹਤ ਰਿਕਾਰਡ ਵੀ Health Connect ਤੋਂ ਮਿਟਾਓ"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"ਇਸ ਐਪ ਲਈ ਇਜਾਜ਼ਤਾਂ ਹਟਾਈਆਂ ਗਈਆਂ"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"ਸਾਰਾ Health Connect ਡਾਟਾ ਵੀ ਮਿਟਾਓ"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"ਅਗਲਾ ਦਿਨ"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"ਚੁਣਿਆ ਹੋਇਆ ਦਿਨ"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ਪਿਛਲਾ ਦਿਨ"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"ਐਪ ਸਰੋਤਾਂ ਦਾ ਸੰਪਾਦਨ ਕਰੋ"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਡੀਵਾਈਸ"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ਐਪ ਡਾਟਾ"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> ਦਾ ਡਾਟਾ ਇੱਥੇ ਦਿਖਾਇਆ ਜਾਵੇਗਾ"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect ਤੱਕ ਪਹੁੰਚ ਵਾਲੀਆਂ ਐਪਾਂ ਦਾ ਡਾਟਾ ਇੱਥੇ ਦਿਖੇਗਾ"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"ਦਿਨ"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"ਹਫ਼ਤਾ"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"ਮਹੀਨਾ"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"ਕੀ ਚੁਣੀ ਗਈ <xliff:g id="APP_NAME">%1$s</xliff:g> ਦੇ, <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ਵਾਲੇ ਹਫ਼ਤੇ ਦੇ ਇੰਦਰਾਜ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣੇ ਹਨ?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"ਕੀ ਚੁਣੀ ਗਈ <xliff:g id="APP_NAME">%1$s</xliff:g> ਦੇ <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ਵਾਲੇ ਇੰਦਰਾਜ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣੇ ਹਨ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ਕੀ ਇਸ <xliff:g id="APP_NAME">%s</xliff:g> ਦਾ ਇਹ ਇੰਦਰਾਜ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣਾ ਹੈ?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"ਕੀ <xliff:g id="APP_NAME">%2$s</xliff:g> ਲਈ <xliff:g id="DATA_TYPE">%1$s</xliff:g> ਡਾਟੇ ਨੂੰ ਪੱਕੇ ਤੌਰ \'ਤੇ ਮਿਟਾਉਣਾ ਹੈ?"</string>
 </resources>
