--- a/apk/res/values-pl/strings.xml
+++ b/apk/res/values-pl/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Zarządzaj na urządzeniu danymi o zdrowiu i aktywności fizycznej oraz kontroluj, które aplikacje mogą z nich korzystać"</string>
     <string name="data_title" msgid="4456619761533380816">"Dane i dostęp"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Przeglądaj dane o stanie zdrowia"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Wyświetl dane o stanie zdrowia i aplikacje, które mają do nich dostęp"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Wszystkie kategorie"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Zobacz wszystkie kategorie"</string>
     <string name="no_data" msgid="1906986019249068659">"Brak danych"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"Aplikacja <xliff:g id="APP_NAME">%1$s</xliff:g> nie będzie już mogła odczytywać danych z Health Connect (w tym danych w tle i wcześniejszych danych) ani ich zapisywać.\n\nNie wpływa to na inne uprawnienia, które może mieć ta aplikacja, np. dotyczące aparatu, mikrofonu czy lokalizacji."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Usuń z Health Connect dane o aktywności fizycznej i dane o stanie zdrowia z aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Uprawnienia tej aplikacji zostały usunięte"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Usuń też wszystkie dane z Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Następny dzień"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Wybrany dzień"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Poprzedni dzień"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Dostęp aplikacji"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Nie masz obecnie zainstalowanych żadnych zgodnych aplikacji"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Dodatkowy dostęp"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Wcześniejsze dane, dane w tle"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Usunięto dodatkowe uprawnienia dla tej aplikacji"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Uprawnienia"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness i dbanie o zdrowie"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Słabe krwawienie"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Średnie krwawienie"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Obfite krwawienie"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Nieznany przepływ"</string>
     <string name="period_day" msgid="3821944462093965882">"Dzień okresu: <xliff:g id="DAY">%1$d</xliff:g> z <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Okres (1 dzień)}few{Okres (# dni)}many{Okres (# dni)}other{Okres (# dnia)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Pozytywny wynik"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negatywny wynik"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Wysoka"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Edytuj źródła aplikacji"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Ustawienie domyślne urządzenia"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Dane aplikacji"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Tutaj pojawią się dane z aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Tutaj pojawią się dane z aplikacji z dostępem do Health Connect"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Dzień"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Tydzień"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Miesiąc"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Trwale usunąć wybrane wpisy z aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g> dotyczące tego tygodnia: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Trwale usunąć wybrane wpisy z aplikacji <xliff:g id="APP_NAME">%1$s</xliff:g> dotyczące tego miesiąca: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Trwale usunąć ten wpis z aplikacji <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Trwale usunąć te dane (<xliff:g id="DATA_TYPE">%1$s</xliff:g>) w przypadku aplikacji <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
