--- a/apk/res/values-ro/strings.xml
+++ b/apk/res/values-ro/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Gestionează datele despre sănătate și fitness de pe dispozitiv și alege aplicațiile care le pot accesa"</string>
     <string name="data_title" msgid="4456619761533380816">"Date și acces"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Răsfoiește datele medicale"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Vezi datele medicale și ce aplicații le pot accesa"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Toate categoriile"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Vezi toate categoriile"</string>
     <string name="no_data" msgid="1906986019249068659">"Fără date"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> nu va mai putea să citească sau să scrie date din Health Connect, inclusiv date de fundal și anterioare.\n\nAcest lucru nu afectează celelalte permisiuni pe care le poate avea aplicația, cum ar fi cele pentru camera foto, microfon sau locație."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Șterge și datele despre fitness și datele medicale de la <xliff:g id="APP_NAME">%1$s</xliff:g> din Health Connect"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"S-au eliminat permisiunile pentru această aplicație"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Șterge și toate datele Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Ziua următoare"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Ziua selectată"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Ziua anterioară"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Accesul la aplicații"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Momentan, nu ai aplicații compatibile instalate"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Acces suplimentar"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Date anterioare, date de fundal"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"S-au eliminat permisiunile suplimentare pentru această aplicație"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Permisiuni"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness și wellness"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Menstruație redusă"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Menstruație medie"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Menstruație abundentă"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Flux necunoscut"</string>
     <string name="period_day" msgid="3821944462093965882">"Ziua menstruației <xliff:g id="DAY">%1$d</xliff:g> din <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Menstruație (o zi)}few{Menstruație (# zile)}other{Menstruație (# de zile)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Pozitiv"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Fertilitate ridicată"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Editează sursele de aplicații"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Prestabilită pentru dispozitiv"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Datele aplicației"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Datele din <xliff:g id="APP_NAME">%1$s</xliff:g> vor apărea aici"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Datele din aplicațiile cu acces la Health Connect se vor afișa aici"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Zi"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Săptămână"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Lună"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Ștergi definitiv <xliff:g id="APP_NAME">%1$s</xliff:g> intrări selectate pentru săptămâna <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ștergi definitiv <xliff:g id="APP_NAME">%1$s</xliff:g> intrări selectate pentru <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Ștergi definitiv intrarea din <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Ștergi definitiv datele despre <xliff:g id="DATA_TYPE">%1$s</xliff:g> pentru <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
