--- a/apk/res/values-sq/strings.xml
+++ b/apk/res/values-sq/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Menaxho të dhënat e shëndetit dhe të fitnesit në pajisjen tënde dhe kontrollo se cilat aplikacione mund të kenë qasje në to"</string>
     <string name="data_title" msgid="4456619761533380816">"Të dhënat dhe qasja"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Shfleto të dhënat shëndetësore"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Shiko të dhënat e tua shëndetësore dhe se cilat aplikacione mund të qasen në to"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Të gjitha kategoritë"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Shiko të gjitha kategoritë"</string>
     <string name="no_data" msgid="1906986019249068659">"Nuk ka të dhëna"</string>
@@ -333,21 +332,14 @@
     <string name="request_permissions_header_time_frame_desc" msgid="3023660534681391973">"Nëse i jep qasje për të lexuar, aplikacioni mund të lexojë të dhëna të reja dhe të dhëna nga 30 ditët e fundit"</string>
     <string name="request_permissions_header_time_frame_history_desc" msgid="3792732353571153175">"Nëse i jep qasje për të lexuar, aplikacioni mund të lexojë të dhënat e reja dhe të kaluara"</string>
     <string name="request_permissions_header_title" msgid="4264236128614363479">"Të lejohet <xliff:g id="APP_NAME">%1$s</xliff:g> që të ketë qasje në Health Connect?"</string>
-    <!-- no translation found for request_permissions_rationale (2642076968583316986) -->
-    <skip />
+    <string name="request_permissions_rationale" msgid="2642076968583316986">"Mund të mësosh se si <xliff:g id="APP_NAME">%1$s</xliff:g> i administron të dhënat e tua te <xliff:g id="PRIVACY_POLICY_LINK">%2$s</xliff:g>."</string>
     <string name="request_permissions_privacy_policy" msgid="228503452643555737">"politika e privatësisë"</string>
-    <!-- no translation found for medical_request_header (2300521519021510027) -->
-    <skip />
-    <!-- no translation found for medical_request_header_desc (5721171305631983663) -->
-    <skip />
-    <!-- no translation found for medical_request_about_health_records (7204918218748362687) -->
-    <skip />
-    <!-- no translation found for medical_request_data_to_share (2208383833492573960) -->
-    <skip />
-    <!-- no translation found for medical_request_share (6237397362923728514) -->
-    <skip />
-    <!-- no translation found for medical_request_footer (6533749932770903089) -->
-    <skip />
+    <string name="medical_request_header" msgid="2300521519021510027">"Të lejohet që <xliff:g id="APP_NAME">%1$s</xliff:g> të ketë qasje te të dhënat të dhënat e tua shëndetësore?"</string>
+    <string name="medical_request_header_desc" msgid="5721171305631983663">"Nëse jep qasje, aplikacioni mund të lexojë dhe të shkruajë të dhënat si p.sh. alergjitë, rezultatet laboratorike, vaksinat etj.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
+    <string name="medical_request_about_health_records" msgid="7204918218748362687">"Rreth të dhënave shëndetësore"</string>
+    <string name="medical_request_data_to_share" msgid="2208383833492573960">"Të dhënat për t\'u ndarë"</string>
+    <string name="medical_request_share" msgid="6237397362923728514">"Nëse e lejon, <xliff:g id="APP_NAME">%1$s</xliff:g> mund të ndajë të dhënat e tua shëndetësore me Health Connect."</string>
+    <string name="medical_request_footer" msgid="6533749932770903089">"Të sinkronizojë të dhënat e tua shëndetësore nga aplikacionet dhe burime të ndryshme për t\'i mbajtur në një vend të vetëm"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Të hiqen të gjitha lejet?"</string>
     <string name="permissions_disconnect_dialog_disconnect" msgid="8854787587948224752">"Hiqi të gjitha"</string>
     <string name="permissions_disconnect_dialog_message" msgid="7961269838207365478">"<xliff:g id="APP_NAME">%1$s</xliff:g> nuk do të mund të lexojë apo të shkruajë më asnjë të dhënë nga Health Connect.\n\nKjo nuk ndikon te lejet e tjera që ky aplikacion mund të ketë, si p.sh. te kamera, mikrofoni ose vendndodhja."</string>
@@ -370,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> nuk do të mund të lexojë apo të shkruajë më të dhëna nga Health Connect, duke përfshirë të dhënat në sfond dhe të dhënat e kaluara.\n\nKjo nuk ndikon te lejet e tjera që ky aplikacion mund të ketë, si p.sh. te kamera, mikrofoni ose vendndodhja."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Fshi gjithashtu të dhënat e fitnesit dhe të dhënat shëndetësore nga <xliff:g id="APP_NAME">%1$s</xliff:g> nga Health Connect"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"U hoqën lejet për këtë aplikacion"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Fshi gjithashtu të gjitha të dhënat e Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Dita tjetër"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Dita e zgjedhur"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Dita e mëparshme"</string>
@@ -410,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Qasja e aplikacionit"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Aktualisht nuk ke asnjë aplikacion të përputhshëm të instaluar"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Qasja shtesë"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Të dhënat e kaluara, të dhënat në sfond"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"U hoqën lejet shtesë për këtë aplikacion"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Lejet"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitnesi dhe mirëqenia"</string>
@@ -612,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Fluks i lehtë"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Fluks mesatar"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Fluks i lartë"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Fluks i panjohur"</string>
     <string name="period_day" msgid="3821944462093965882">"Menstruacionet: Dita <xliff:g id="DAY">%1$d</xliff:g> nga <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Periodat (1 ditë)}other{Periodat (# ditë)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Pozitiv"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Negativ"</string>
     <string name="ovulation_high" msgid="205362931427158291">"I lartë"</string>
@@ -1085,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Modifiko burimet e aplikacioneve"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Parazgjedhja e pajisjes"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Të dhënat e aplikacionit"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Të dhënat nga <xliff:g id="APP_NAME">%1$s</xliff:g> do të shfaqen këtu"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Të dhënat nga aplikacionet që kanë qasje te Health Connect do të shfaqen këtu"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Dita"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Java"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Muaji"</string>
@@ -1134,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Të fshihen përgjithmonë hyrjet e zgjedhura të <xliff:g id="APP_NAME">%1$s</xliff:g> për javën <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Të fshihen përgjithmonë hyrjet e zgjedhura të <xliff:g id="APP_NAME">%1$s</xliff:g> për <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Të fshihet përgjithmonë kjo hyrje e <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Të fshihen përgjithmonë të dhënat për <xliff:g id="DATA_TYPE">%1$s</xliff:g> për <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
