--- a/apk/res/values-sr/strings.xml
+++ b/apk/res/values-sr/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> више неће моћи да чита ни уписује податке из Повезивања здравља, укључујући позадинске и раније податке.\n\nТо не утиче на друге дозволе које ова апликација може да има, попут камере, микрофона или локације."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Избриши и податке о фитнесу и здравствену евиденцију из апликације <xliff:g id="APP_NAME">%1$s</xliff:g> из Повезивања здравља"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Дозволе за ову апликацију су уклоњене"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Избриши и све податке Повезивања здравља"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Следећи дан"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Изабрани дан"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Претходни дан"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Измени изворе апликација"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Подразумевано за уређај"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Подаци апликација"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Подаци из апликације <xliff:g id="APP_NAME">%1$s</xliff:g> ће бити овде"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Подаци из апликација са приступом Повезивању здравља ће бити овде"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Дан"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Недеља"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Месец"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Желите трајно да избришете изабране уносе у: <xliff:g id="APP_NAME">%1$s</xliff:g> за недељу <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Желите трајно да избришете изабране уносе у: <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Желите трајно да избришете овај унос у: <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Желите трајно да избришете податке типа <xliff:g id="DATA_TYPE">%1$s</xliff:g> за <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
