--- a/apk/res/values-sv/strings.xml
+++ b/apk/res/values-sv/strings.xml
@@ -362,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan inte längre läsa eller skriva data i Health Connect, inklusive bakgrundsdata och tidigare data.\n\nDetta påverkar inte andra behörigheter som appen kanske har, som kamera-, mikrofon- eller platsbehörighet."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Radera även träningsdata och hälsojournaler från <xliff:g id="APP_NAME">%1$s</xliff:g> från Health Connect"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Behörigheter för den här appen har tagits bort"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Radera även all Health Connect-data"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Nästa dag"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Välj dag"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Föregående dag"</string>
@@ -1074,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Redigera appkällor"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Enhetens standardinställning"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Appdata"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Data från <xliff:g id="APP_NAME">%1$s</xliff:g> visas här"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Data från appar med åtkomst till Health Connect visas här"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Dag"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Vecka"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Månad"</string>
@@ -1123,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Vill du radera de markerade <xliff:g id="APP_NAME">%1$s</xliff:g>-posterna från veckan <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> permanent?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Vill du radera de markerade <xliff:g id="APP_NAME">%1$s</xliff:g>-posterna från <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> permanent?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Vill du radera <xliff:g id="APP_NAME">%s</xliff:g>-posten permanent?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Vill du radera <xliff:g id="DATA_TYPE">%1$s</xliff:g>-data för <xliff:g id="APP_NAME">%2$s</xliff:g> permanent?"</string>
 </resources>
