--- a/apk/res/values-tr/strings.xml
+++ b/apk/res/values-tr/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Cihazınızdaki sağlık ve fitness verilerini yönetin ve hangi uygulamaların bu verilere erişebileceğini kontrol edin"</string>
     <string name="data_title" msgid="4456619761533380816">"Veriler ve erişim"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Sağlık kayıtlarına göz at"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Sağlık kayıtlarınızı ve bu kayıtlara erişebilen uygulamaları görüntüleyin"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Tüm kategoriler"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Tüm kategorileri göster"</string>
     <string name="no_data" msgid="1906986019249068659">"Veri yok"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> artık arka plan verileri ve geçmiş veriler de dahil olmak üzere Health Connect\'teki verileri okuyamayacak veya yazamayacak.\n\nBu durum, uygulamanın sahip olabileceği kamera, mikrofon veya konum gibi diğer izinleri etkilemez."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasındaki fitness verilerini ve sağlık kayıtlarını da Health Connect\'ten sil"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Bu uygulamanın izinleri kaldırıldı"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Ayrıca Health Connect verilerinin tamamını sil"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Sonraki gün"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Seçili gün"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Önceki gün"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Uygulama erişimi"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Şu anda yüklü olan uyumlu uygulamanız yok"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Ek erişim"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Geçmiş veriler, arka plan verileri"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Bu uygulamanın ek izinleri kaldırıldı"</string>
     <string name="permissions_header" msgid="6519976063360071569">"İzinler"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Fitness ve sağlıklı yaşam"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Hafif kanama"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Orta düzeyde kanama"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Yoğun kanama"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Bilinmeyen akış"</string>
     <string name="period_day" msgid="3821944462093965882">"Âdet günü: <xliff:g id="DAY">%1$d</xliff:g>/<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Âdetin (1 gün sürdü)}other{Âdet (# gün sürdü)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Olumlu"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Olumsuz"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Yüksek"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Uygulama kaynaklarını düzenleyin"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Cihaz varsayılanı"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Uygulama verileri"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> verileri burada gösterilir"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect\'e erişimi olan uygulamaların verileri burada gösterilir"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Gün"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Hafta"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Ay"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> haftasına ait seçili <xliff:g id="APP_NAME">%1$s</xliff:g> girişleri kalıcı olarak silinsin mi?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ayına ait seçili <xliff:g id="APP_NAME">%1$s</xliff:g> girişleri kalıcı olarak silinsin mi?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> girişi kalıcı olarak silinsin mi?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> için <xliff:g id="DATA_TYPE">%1$s</xliff:g> verileri kalıcı olarak silinsin mi?"</string>
 </resources>
