--- a/apk/res/values-uk/strings.xml
+++ b/apk/res/values-uk/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Керуйте даними про здоров’я і фізичну активність на пристрої, а також визначайте додатки, які матимуть доступ до цих даних"</string>
     <string name="data_title" msgid="4456619761533380816">"Дані й доступ"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Переглянути медичні дані"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Переглядайте свої медичні дані й додатки, які мають до них доступ"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Усі категорії"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Переглянути всі категорії"</string>
     <string name="no_data" msgid="1906986019249068659">"Немає даних"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> більше не зможе переглядати або записувати дані з Health Connect, зокрема минулі дані чи дані у фоновому режимі.\n\nЦе не вплине на інші дозволи цього додатка (наприклад, на доступ до камери, мікрофона чи геоданих)."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Також видалити дані про фізичну активність і медичні дані з додатка <xliff:g id="APP_NAME">%1$s</xliff:g> із Health Connect"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Дозволи для цього додатка вилучено"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Також видалити всі дані Health Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Наступний день"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Вибраний день"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Попередній день"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Доступ додатка"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Наразі у вас не встановлено сумісних додатків"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Додатковий доступ"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Минулі дані, фоновий режим"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Для цього додатка видалено й інші дозволи"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Дозволи"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Фізична активність і здоров’я"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Незначні виділення"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Помірні виділення"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Рясні виділення"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Невідомо"</string>
     <string name="period_day" msgid="3821944462093965882">"<xliff:g id="DAY">%1$d</xliff:g>-й день менструації з <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Менструація (1 день)}one{Менструація (# день)}few{Менструація (# дні)}many{Менструація (# днів)}other{Менструація (# дня)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Позитивний"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Негативний"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Високий результат"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Змінити додатки-джерела"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"За умовчанням для пристрою"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Дані додатка"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Тут відображатимуться дані з додатка <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Тут відображатимуться дані з додатків, які мають доступ до Health Connect"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"День"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Тиждень"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Місяць"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Видалити назавжди вибрані записи додатка <xliff:g id="APP_NAME">%1$s</xliff:g> за тиждень (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>)?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Видалити назавжди вибрані записи додатка <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Видалити назавжди цей запис додатка <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Назавжди видалити дані (<xliff:g id="DATA_TYPE">%1$s</xliff:g>) для додатка <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
