--- a/apk/res/values-zh-rCN/strings.xml
+++ b/apk/res/values-zh-rCN/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"管理设备上的健康与健身数据，并控制哪些应用可以访问这些数据"</string>
     <string name="data_title" msgid="4456619761533380816">"数据和访问权限"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"浏览健康记录"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"查看您的健康记录，并了解哪些应用可以访问这些记录"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"所有类别"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"查看所有类别"</string>
     <string name="no_data" msgid="1906986019249068659">"无数据"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"“<xliff:g id="APP_NAME">%1$s</xliff:g>”将无法再读取“健康数据共享”中的数据，也无法再向其中写入数据，包括后台数据和历史数据。\n\n这不会影响此应用可能拥有的其他权限，例如摄像头使用权限、麦克风使用权限或位置信息访问权限。"</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"同时从“健康数据共享”中删除来自“<xliff:g id="APP_NAME">%1$s</xliff:g>”的健身数据和健康记录"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"已移除此应用的权限"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"同时删除所有来自“健康数据共享”的数据"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"后一天"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"选定的日期"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"前一天"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"应用访问权限"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"您目前没有安装任何兼容应用"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"其他访问权限"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"历史数据、后台数据"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"已撤消此应用的其他权限"</string>
     <string name="permissions_header" msgid="6519976063360071569">"权限"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"健身和健康"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"月经量：少"</string>
     <string name="flow_medium" msgid="3783688724668943154">"月经量：中"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"月经量：多"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"出血量未知"</string>
     <string name="period_day" msgid="3821944462093965882">"经期第 <xliff:g id="DAY">%1$d</xliff:g> 天（共 <xliff:g id="TOTAL_LENGTH">%2$d</xliff:g> 天）"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{经期（1 天）}other{经期（# 天）}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"阳性"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"阴性"</string>
     <string name="ovulation_high" msgid="205362931427158291">"高"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"编辑应用来源"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"设备默认设置"</string>
     <string name="app_data_title" msgid="6499967982291000837">"应用数据"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"来自“<xliff:g id="APP_NAME">%1$s</xliff:g>”的数据将显示在此处"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"来自以下应用的数据将显示在此处：具有“健康数据共享”访问权限的应用"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"日"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"周"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"月"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>这一周的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"要永久删除 <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>的所选“<xliff:g id="APP_NAME">%1$s</xliff:g>”条目吗？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"要永久删除此“<xliff:g id="APP_NAME">%s</xliff:g>”条目吗？"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"要永久删除“<xliff:g id="APP_NAME">%2$s</xliff:g>”的<xliff:g id="DATA_TYPE">%1$s</xliff:g>数据吗？"</string>
 </resources>
