--- a/apk/res/values-zu/strings.xml
+++ b/apk/res/values-zu/strings.xml
@@ -23,8 +23,7 @@
     <string name="home_subtitle" msgid="2154213430054477787">"Phatha idatha yezempilo nokufaneleka edivayisini yakho, futhi ulawule ukuthi yimaphi ama-app angafinyelela kuyo"</string>
     <string name="data_title" msgid="4456619761533380816">"Idatha kanye nokufinyelela"</string>
     <string name="browse_medical_data" msgid="6963802956096683273">"Bhrawuza amarekhodi ezempilo"</string>
-    <!-- no translation found for browse_medical_data_subtitle (4115165261000205538) -->
-    <skip />
+    <string name="browse_medical_data_subtitle" msgid="4115165261000205538">"Buka amarekhodi akho ezempilo nokuthi yimaphi ama-app angawafinyelela"</string>
     <string name="all_categories_title" msgid="1446410643217937926">"Zonke izigaba"</string>
     <string name="see_all_categories" msgid="5599882403901010434">"Bona zonke izigaba"</string>
     <string name="no_data" msgid="1906986019249068659">"Ayikho idatha"</string>
@@ -363,6 +362,7 @@
     <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"I-<xliff:g id="APP_NAME">%1$s</xliff:g> ngeke isakwazi ukufunda noma ukubhala idatha evela kuHealth Connect, kuhlanganise idatha yokungemuva kanye nedlule.\n\nLokhu akuzithinti ezinye izimvume le app engase ibe nazo, njengekhamera, imakrofoni noma indawo."</string>
     <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Phinde usule idatha yokuzivocavoca namarekhodi ezempilo avela ku-<xliff:g id="APP_NAME">%1$s</xliff:g> kuHealth Connect"</string>
     <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Kususwe izimvume zale app"</string>
+    <string name="disconnect_all_app_permissions_dialog_checkbox" msgid="2927403999111348272">"Futhi sula yonke idatha yeHealth Connect"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Usuku olulandelayo"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Usuku olukhethiwe"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Usuku lwangaphambilini"</string>
@@ -403,8 +403,7 @@
     <string name="app_access_title" msgid="7137018424885371763">"Ukufinyelela kwe-app"</string>
     <string name="connected_apps_empty_list_section_title" msgid="6821215432694207342">"Okwamanje awunawo ama-app ahambelanayo afakiwe."</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Ukufinyelela okungeziwe"</string>
-    <!-- no translation found for additional_access_summary (1076197455435130191) -->
-    <skip />
+    <string name="additional_access_summary" msgid="1076197455435130191">"Idatha edlule, idatha yasemuva"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Izimvume ezisusiwe ezengeziwe zale app"</string>
     <string name="permissions_header" msgid="6519976063360071569">"Izimvume"</string>
     <string name="fitness_permissions" msgid="586264186537460254">"Ukufaneleka nempilo enhle"</string>
@@ -605,11 +604,9 @@
     <string name="flow_light" msgid="1937543318146228793">"Ukopha kancane"</string>
     <string name="flow_medium" msgid="3783688724668943154">"Ukopha ngokumaphakathi"</string>
     <string name="flow_heavy" msgid="8672261792750634294">"Ukopha kakhulu"</string>
-    <!-- no translation found for flow_unknown (1634411759928572900) -->
-    <skip />
+    <string name="flow_unknown" msgid="1634411759928572900">"Ukopha okungaziwa"</string>
     <string name="period_day" msgid="3821944462093965882">"Usuku lwenkathi olu-<xliff:g id="DAY">%1$d</xliff:g> kwangu-<xliff:g id="TOTAL_LENGTH">%2$d</xliff:g>"</string>
-    <!-- no translation found for period_length (2257138792780916599) -->
-    <skip />
+    <string name="period_length" msgid="2257138792780916599">"{count,plural, =1{Ukuya esikhathini (usuku olu-1)}one{Ukuya esikhathini (izinsuku ezingu-#)}other{Ukuya esikhathini (izinsuku ezingu-#)}}"</string>
     <string name="ovulation_positive" msgid="6588547263126320238">"Okuhle"</string>
     <string name="ovulation_negative" msgid="591588801112312454">"Okubi"</string>
     <string name="ovulation_high" msgid="205362931427158291">"Phezulu"</string>
@@ -1078,10 +1075,8 @@
     <string name="edit_data_sources" msgid="79641360876849547">"Hlela izinsiza ze-app"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Idivayisi ezenzakalelayo"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Idatha ye-app"</string>
-    <!-- no translation found for app_data_no_data_footer (7027700714577530371) -->
-    <skip />
-    <!-- no translation found for all_data_no_data_footer (2553443887019153340) -->
-    <skip />
+    <string name="app_data_no_data_footer" msgid="7027700714577530371">"Idatha evela ku-<xliff:g id="APP_NAME">%1$s</xliff:g> izobonakala lapha"</string>
+    <string name="all_data_no_data_footer" msgid="2553443887019153340">"Idatha ekuma-app akwazi ukufinyelela kuHealth Connect izovela lapha"</string>
     <string name="date_picker_day" msgid="3076687507968958991">"Usuku"</string>
     <string name="date_picker_week" msgid="1038805538316142229">"Iviki"</string>
     <string name="date_picker_month" msgid="3560692391260778560">"Inyanga"</string>
@@ -1127,6 +1122,5 @@
     <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Sula unomphela okukhona okukhethiwe ku-<xliff:g id="APP_NAME">%1$s</xliff:g> kwangeviki lomhla ka-<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Sula unomphela okukhona okukhethiwe ku-<xliff:g id="APP_NAME">%1$s</xliff:g> kwangomhla ka-<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Sula unomphela lokhu ku-<xliff:g id="APP_NAME">%s</xliff:g>?"</string>
-    <!-- no translation found for inactive_app_data_selected_deletion_confirmation_dialog (3192411589802497811) -->
-    <skip />
+    <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Sula ngokuzenzakalela idatha ye-<xliff:g id="DATA_TYPE">%1$s</xliff:g> ye-<xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
 </resources>
